--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -14,26 +14,38 @@
   "app-title-sub": "الفرعية",
   "app-title-pages": "الصفحات",
   "app-title-citations": "اقتباسات",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "مفاتيح واجهة برمجة التطبيقات",
+  "app-menu-search-in": "بحث في",
+  "app-menu-search-in-option-reference": "المراجع",
+  "app-menu-search-in-option-culture": "ثقافة",
+  "app-menu-search-in-option-science": "علوم",
+  "app-menu-search-in-option-business": "عمل",
+  "app-menu-filter-by": "مصنف بواسطة",
+  "app-menu-filter-by-option-text": "نص",
+  "app-menu-filter-by-option-image": "صورة",
+  "app-menu-filter-by-option-video": "فيديو",
+  "app-menu-filter-by-option-audio": "صوتي",
+  "app-menu-filter-by-option-data": "بيانات",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "برمجة",
+  "app-menu-filter-by-option-archive": "أرشيف",
+  "app-menu-filter-by-option-entity": "كيان",
+  "app-menu-filter-by-year-range": "النطاق السنوي",
+  "app-menu-nature-location-quiz": "مسابقة موقع الطبيعة",
+  "app-menu-sort-by": "ترتيب حسب",
+  "app-menu-sort-by-option-relevance-desc": "الصلة ↓",
+  "app-menu-sort-by-option-relevance-asc": "الصلة ↑",
+  "app-menu-sort-by-option-date-desc": "التاريخ ↓",
+  "app-menu-sort-by-option-date-asc": "التاريخ ↑",
+  "app-menu-sort-by-option-update-desc": "تحديث ↓",
+  "app-menu-sort-by-option-update-asc": "تحديث ↑",
+  "app-menu-sort-by-option-random": "عشوائي",
+  "app-menu-sort-by-option-citations-desc": "الاقتباسات ↓",
+  "app-menu-sort-by-option-citations-asc": "الاقتباسات ↑",
+  "app-menu-sort-by-option-title-asc": "العنوان ↑",
+  "app-menu-sort-by-option-title-desc": "العنوان ↓",
+  "app-menu-sort-by-option-distance-asc": "المسافة ↑",
+  "app-menu-sort-by-option-distance-desc": "المسافة ↓",
   "app-menu-actions": "أجراءات",
   "app-menu-background-audio": "صوتي",
   "app-menu-background-midi": "ميدي",
@@ -43,6 +55,8 @@
   "app-menu-theme": "سمة",
   "app-menu-interface-language": "لغة الواجهة",
   "app-menu-voice": "صوت",
+  "app-menu-show-inline-help": "إظهار المساعدة المضمنة",
+  "app-menu-inline-help": "مساعدة مضمنة",
   "app-menu-user-manual": "دليل الاستخدام",
   "app-menu-keyboard-shortcuts": "اختصارات لوحة المفاتيح",
   "app-menu-credits": "الاعتمادات",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "ملء الشاشة تبديل",
   "app-menu-bookmark-actions": "إجراءات اختيار الإشارة المرجعية",
   "app-menu-bookmark-actions-reasoning": "منطق",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "وسائط",
+  "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
+  "app-menu-add-bookmark": "اضافة للمفضلة",
+  "app-menu-add-bookmark-title": "عنوان",
+  "app-menu-add-bookmark-url": "عنوان URL",
+  "app-menu-add-bookmark-images": "الصور",
+  "app-menu-add-bookmark-clear-files": "ملفات واضحة",
+  "app-menu-add-bookmark-submit": "اضافة للمفضلة",
   "app-menu-import-as": "استيراد الإشارات المرجعية",
   "app-menu-export-as": "تصدير الإشارات المرجعية",
-  "app-menu-bookmark-actions-media": "وسائط",
   "app-menu-upload-json": "رفع",
-  "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-visual-search": "البحث البصري",
   "app-menu-reading-assistance": "المساعدة في القراءة",
   "app-menu-bread": "بداية الكلمة بالخط العريض",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "يقذف",
   "app-menu-fullscreen-active-pane": "ملء الشاشة الجزء النشط",
   "app-menu-toggle-sidebar": "تبديل الشريط الجانبي",
-  "app-menu-add-bookmark": "اضافة للمفضلة",
   "app-menu-note-1": "الملاحظة 1: متاحة فقط عندما يكون التركيز على الشريط الجانبي أو جزء مقالة ويكيبيديا.",
   "app-menu-features": "سمات",
   "app-menu-persona": "شخصية",
   "app-menu-country-select": "دولة",
   "app-menu-interests": "الإهتمامات",
-  "app-menu-nature-location-quiz": "مسابقة موقع الطبيعة",
   "app-menu-command-editor": "محرر الأوامر",
   "app-menu-presentation": "عرض تقديمي",
   "app-menu-editor": "محرر",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "انتقل إلى الجزء السابق",
   "app-menu-new-search": "بحث جديد",
   "app-menu-structured-search": "بحث منظم",
-  "app-menu-geospatial-search": "البحث الجغرافي",
+  "app-menu-geospatial-search": "البحث الجغرافي المكاني",
   "app-section-main": "رئيسي",
   "app-section-info": "معلومات",
   "app-section-library": "مكتبة",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "علم المعادن",
   "app-section-science-archeology": "علم الآثار",
   "app-section-science-mathematics": "الرياضيات",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "الفلك",
+  "app-section-science-physics": "الفيزياء",
+  "app-section-science-computing": "الحوسبة",
   "app-section-media-datasets": "مجموعات البيانات",
   "app-section-media-datasets-general": "عام",
   "app-section-media-datasets-topical": "موضعي",
