--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -1,83 +1,88 @@
 {
   "app-tab-topics-title": "বিষয়",
-  "app-tab-list-title": "তালিকা",
+  "app-tab-list-title": "১",
   "app-tab-bookmarks-title": "বুকমার্ক",
-  "app-tab-tools-title": "টুলস",
-  "app-tab-settings-title": "সেটিংস",
+  "app-tab-tools-title": "টুস",
+  "app-tab-settings-title": "বোধংস",
   "app-tab-help-title": "সাহায্য",
   "app-tab-audio-chat-title": "অডিও চ্যাট",
-  "app-notification-too-few-compare-topics": "বোতামটি ব্যবহার করে তুলনা করার জন্য প্রথমে দুই বা ততোধিক বিষয় যোগ করুন (উইকিপিডিয়া-নিবন্ধের শীর্ষে এবং বিষয়ের মেটা-সেকশনে অবস্থিত)",
+  "app-notification-too-few-compare-topics": "বোটি ব্যবহার করে তুলনা করার পদ্ধতির জন্য দুই বা তাতোধিক বিষয় যোগ করুন (উইকিপিডিয়া-বন্ধনের শীর্ষ এবং বিষয়ের মেটা-স ক্রমাঙ্কে সমর্থন)",
   "app-search-placeholder": "অনুসন্ধান",
-  "app-topics-found": "বিষয় পাওয়া গেছে",
-  "app-title-occurence": "ঘটনার মানচিত্র",
+  "app-topics-found": "বিষয়টি পাওয়া গেছে",
+  "app-title-occurence": "দৃশ্য মানচিত্র",
   "app-title-super": "সুপার",
   "app-title-sub": "উপ",
-  "app-title-pages": "পৃষ্ঠাগুলি",
+  "app-title-pages": "পাতাগুলি",
   "app-title-citations": "উদ্ধৃতি",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-filter-by": "দ্বারা ফিল্টার করুন",
+  "app-menu-filter-by-year-range": "বছরের পরিসীমা",
+  "app-menu-show-inline-help": "ইনলাইন সাহায্য দেখান",
+  "app-menu-inline-help": "ইনলাইন সাহায্য",
+  "app-menu-nature-location-quiz": "প্রকৃতি অবস্থান কুইজ",
+  "app-menu-sort-by": "ক্রমানুসার",
+  "app-menu-search-in": "অনুসন্ধান",
+  "app-menu-search-in-option-reference": "রেফারেন্স",
+  "app-menu-api-keys": "API কী",
+  "app-menu-sort-by-option-relevance-desc": "প্রাসঙ্গিকতা ↓",
+  "app-menu-search-in-option-culture": "সংস্কৃতি",
+  "app-menu-search-in-option-science": "বিজ্ঞান",
+  "app-menu-search-in-option-business": "ব্যবসা",
+  "app-menu-sort-by-option-relevance-asc": "প্রাসঙ্গিকতা ↑",
+  "app-menu-sort-by-option-date-desc": "তারিখ ↓",
+  "app-menu-sort-by-option-date-asc": "তারিখ ↑",
+  "app-menu-sort-by-option-update-asc": "আপডেট ↑",
+  "app-menu-sort-by-option-update-desc": "আপডেট ↓",
+  "app-menu-sort-by-option-random": "এলোমেলো",
+  "app-menu-sort-by-option-citations-desc": "উদ্ধৃতি ↓",
+  "app-menu-sort-by-option-citations-asc": "উদ্ধৃতি ↑",
+  "app-menu-sort-by-option-title-desc": "শিরোনাম ↓",
+  "app-menu-sort-by-option-title-asc": "শিরোনাম ↑",
+  "app-menu-sort-by-option-distance-asc": "দূরত্ব ↑",
+  "app-menu-sort-by-option-distance-desc": "দূরত্ব ↓",
   "app-menu-actions": "কর্ম",
   "app-menu-background-audio": "শ্রুতি",
   "app-menu-background-midi": "MIDI",
-  "app-menu-topic-lists": "বিষয় তালিকা",
+  "app-menu-topic-lists": "বিষয়",
   "app-menu-various-links": "বিভিন্ন লিঙ্ক",
   "app-menu-font": "ফন্ট",
   "app-menu-theme": "থিম",
   "app-menu-interface-language": "ইন্টারফেস ভাষা",
   "app-menu-voice": "ভয়েস",
-  "app-menu-user-manual": "ব্যবহার বিধি",
+  "app-menu-user-manual": "ব্যবহার নিয়ম",
   "app-menu-keyboard-shortcuts": "কীবোর্ড শর্টকাট",
   "app-menu-credits": "ক্রেডিট",
   "app-menu-about": "সম্পর্কিত",
   "app-menu-random-topic": "এলোমেলো বিষয়",
   "app-menu-random-topic-key": "এলোমেলো বিষয়",
-  "app-menu-compare-topics": "বিষয়গুলির তুলনা করুন",
-  "app-menu-toggle-fullscreen": "টগল পর্দা জুড়ে প্রদর্শন",
+  "app-menu-compare-topics": "বিষয় উপস্থাপনা তুলনা করুন",
+  "app-menu-toggle-fullscreen": "টগল পর্দা প্রদর্শন করুন",
   "app-menu-bookmark-actions": "বুকমার্ক-নির্বাচন কর্ম",
-  "app-menu-bookmark-actions-reasoning": "যুক্তি",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-reasoning": "দলিল",
+  "app-menu-add-bookmark-title": "শিরোনাম",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
-  "app-menu-import-as": "বুকমার্ক আমদানি করুন",
+  "app-menu-add-bookmark-images": "ছবি",
+  "app-menu-add-bookmark-clear-files": "ফাইল পরিষ্কার করুন",
+  "app-menu-add-bookmark-submit": "বুকমার্কে সংযুক্তকরন",
+  "app-menu-import-as": "বুকমার্ক চেঞ্জ করুন",
   "app-menu-export-as": "বুকমার্ক রপ্তানি করুন",
-  "app-menu-bookmark-actions-media": "মিডিয়া",
+  "app-menu-bookmark-actions-media": "ভারতীয়",
   "app-menu-upload-json": "আপলোড",
   "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
   "app-menu-visual-search": "চাক্ষুষ অনুসন্ধান",
-  "app-menu-reading-assistance": "পড়ার সহায়তা",
+  "app-menu-reading-assistance": "পড়া সহায়তা",
   "app-menu-bread": "শব্দ শুরু বোল্ডিং",
   "app-menu-ai-tutor": "এআই শিক্ষক",
   "app-menu-datasources": "তথ্য সূত্র",
   "app-menu-clone-tab": "ক্লোন ট্যাব",
-  "app-menu-plant-identification": "উদ্ভিদ সনাক্তকরণ",
-  "app-menu-text-identification": "পাঠ্য সনাক্তকরণ",
+  "app-menu-plant-identification": "তৈরি করা",
+  "app-menu-text-identification": "পাঠ্যক্রমকরণ",
   "app-menu-digital-libraries": "ডিজিটাল লাইব্রেরি",
   "app-menu-geography": "ভূগোল",
   "app-menu-version": "সংস্করণ",
   "app-menu-made-by": "দ্বারা তৈরি",
   "app-menu-all-rights-reserved": "সমস্ত অধিকার সংরক্ষিত",
   "app-menu-font-type": "ফন্টের ধরন",
-  "app-menu-font-size": "অক্ষরের আকার",
+  "app-menu-font-size": "অক্ষর অনুরোধ",
   "app-menu-darkmode": "অন্ধকার মোড",
   "app-menu-link-preview": "লিঙ্ক প্রিভিউ",
   "app-menu-color-filter": "রঙ ফিল্টার",
@@ -85,31 +90,30 @@
   "app-menu-style": "শৈলী",
   "app-menu-speed": "গতি",
   "app-menu-pitch": "পিচ",
-  "app-menu-fullscreen-active-pane": "সক্রিয় ফলকটি ফুলস্ক্রিন করুন",
+  "app-menu-fullscreen-active-pane": "সক্রিয় ফলপ্রসূ ফুল স্ক্রিন করুন",
   "app-menu-toggle-sidebar": "সাইডবার টগল করুন",
-  "app-menu-add-bookmark": "বুকমার্কে সংযুক্তকরন",
-  "app-menu-note-1": "নোট 1: শুধুমাত্র তখনই উপলভ্য যখন ফোকাস সাইডবারে বা উইকিপিডিয়া আর্টিকেল প্যানে থাকে।",
+  "app-menu-add-bookmark": "বুকমার্কে করান",
+  "app-menu-note-1": "নোট 1: শুধুমাত্র তখনই উপলভ্য যখন ফোকাস সাইডবারে বা উইকিপিডিয়া আর্কার্নাল প্যানে থাকে।",
   "app-menu-features": "বৈশিষ্ট্য",
   "app-menu-persona": "ব্যক্তিত্ব",
   "app-menu-country-select": "দেশ",
   "app-menu-interests": "স্বার্থ",
-  "app-menu-nature-location-quiz": "প্রকৃতি অবস্থান কুইজ",
-  "app-menu-command-editor": "কমান্ড সম্পাদক",
-  "app-menu-presentation": "উপস্থাপনা",
-  "app-menu-editor": "সম্পাদক",
+  "app-menu-command-editor": "নির্দেশ",
+  "app-menu-presentation": "দলা",
+  "app-menu-editor": "পছন্দ",
   "app-menu-run-code": "চালান",
   "app-menu-clear-editor": "পরিষ্কার",
   "app-menu-cover-topic": "কভার বিষয়",
   "app-menu-news": "খবর",
   "app-menu-culture": "সংস্কৃতি",
   "app-menu-nature": "প্রকৃতি",
-  "app-menu-license": "লাইসেন্স",
-  "app-menu-goto-next-topic": "পরবর্তী বিষয়ে যান (সাইডবার ফলাফলে)",
-  "app-menu-goto-previous-topic": "পূর্ববর্তী বিষয়ে যান (সাইডবার ফলাফলে)",
+  "app-menu-license": "নিয়ম",
+  "app-menu-goto-next-topic": "পরবর্তী বিষয়ে যান (সবার ফলাফলে)",
+  "app-menu-goto-previous-topic": "পূর্ববর্তী বিষয়ে যান (সবার ফলাফলে)",
   "app-menu-goto-next-pane": "পরবর্তী প্যানে যান",
-  "app-menu-goto-previous-pane": "আগের প্যানে যান",
+  "app-menu-goto-previous-pane": "নিয়মে যান",
   "app-menu-new-search": "নতুন অনুসন্ধান",
-  "app-menu-structured-search": "কাঠামোগত অনুসন্ধান",
+  "app-menu-structured-search": "অনুসন্ধানগত অনুসন্ধান",
   "app-menu-geospatial-search": "ভৌগলিক অনুসন্ধান",
   "app-section-main": "প্রধান",
   "app-section-info": "তথ্য",
@@ -139,7 +143,7 @@
   "app-section-education-quizzes": "কুইজ",
   "app-section-science": "বিজ্ঞান",
   "app-section-science-search-tools": "খোঁজার যন্ত্র",
-  "app-section-science-open-journals": "খোলা জার্নাল",
+  "app-section-science-open-journals": "জার্নাল খোলা",
   "app-section-science-closed-journals": "বন্ধ জার্নাল",
   "app-section-science-news": "খবর",
   "app-section-science-language": "ভাষা",
@@ -149,8 +153,8 @@
   "app-section-science-minerology": "খনিজবিদ্যা",
   "app-section-science-archeology": "প্রত্নতত্ত্ব",
   "app-section-science-mathematics": "অংক",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
+  "app-section-science-computing": "কম্পিউটিং",
+  "app-section-science-physics": "পদার্থবিদ্যা",
   "app-section-science-astronomy": "জ্যোতির্বিদ্যা",
   "app-section-media-datasets": "ডেটাসেট",
   "app-section-media-datasets-general": "সাধারণ",
@@ -161,33 +165,33 @@
   "app-section-library-history": "ইতিহাস",
   "app-section-library-philosophy": "দর্শন",
   "app-section-library-genealogy": "বংশতালিকা",
-  "app-section-library-legal": "আইনি",
+  "app-section-library-legal": "গ্রুপ",
   "app-section-library-products": "পণ্য",
-  "app-section-media": "মিডিয়া",
+  "app-section-media": "ভারতীয়",
   "app-section-media-video": "ভিডিও",
   "app-section-media-image": "ইমেজ",
   "app-section-media-audio": "শ্রুতি",
-  "app-section-media-software": "সফটওয়্যার",
+  "app-section-media-software": "সফটওয়ার",
   "app-section-meta": "মেটা",
   "app-section-society": "সমাজ",
   "app-section-society-sports": "খেলাধুলা",
   "app-section-society-food": "খাদ্য",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
-  "app-section-library-identity": "পরিচয়",
+  "app-section-library-identity": "দল",
   "app-section-society-events": "ঘটনা",
   "app-section-society-shopping": "কেনাকাটা",
-  "app-guide-bookmarks-selected": "নির্বাচিত",
-  "app-guide-bookmarks-deselect-all": "সব গুলো অনির্বাচিত কর",
+  "app-guide-bookmarks-selected": "টিক",
+  "app-guide-bookmarks-deselect-all": "সবগুলো অনির্বাচিত কর",
   "app-guide-bookmark-teach-topics": "আমাকে শেখাও",
   "app-guide-bookmark-quiz-topics": "আমাকে প্রশ্ন করুন",
   "app-guide-bookmark-related-topics": "সম্পর্কিত বিষয়",
-  "app-guide-bookmark-topic-differences": "পার্থক্য",
-  "app-guide-bookmark-commonalities": "সাধারণতা",
+  "app-guide-bookmark-topic-differences": "ভিন্ন",
+  "app-guide-bookmark-commonalities": "সাধারণ",
   "app-guide-bookmark-similarities": "মিল",
   "app-guide-bookmark-implications": "প্রভাব",
   "app-guide-bookmark-history": "ইতিহাস",
-  "app-guide-bookmark-gapminder-country-trend": "দেশের প্রবণতা",
+  "app-guide-bookmark-gapminder-country-trend": "দেশ প্রবণতা",
   "app-guide-see-more": "আরো দেখুন",
   "app-guide-page": "পৃষ্ঠা",
   "app-guide-current-events": "বর্তমান ঘটনা",
@@ -196,12 +200,12 @@
   "app-guide-organism": "জীব",
   "app-guide-music": "সঙ্গীত",
   "app-guide-science": "বিজ্ঞান",
-  "app-guide-welcome-text": "কনজেপ্ট হল একবিংশ শতাব্দীর জন্য একটি বিশ্বকোষ তৈরির প্রচেষ্টা।  <br><br> আপনার অন্বেষণ উপভোগ করুন! ",
+  "app-guide-welcome-text": "কনজেপ্ট হল একবিংশ পাওয়ার জন্য একটি বিশ্বকোষ গঠনের প্রচেষ্টা।  <br><br> আপনার অনবেষণা করুন! ",
   "app-guide-documentary": "তথ্যচিত্র",
   "app-guide-country": "দেশ",
   "app-guide-string-search": "স্ট্রিং অনুসন্ধান",
-  "app-guide-historical-country": "ঐতিহাসিক দেশ",
-  "app-guide-ethnic-group": "জাতিগত গোষ্ঠী",
+  "app-guide-historical-country": "দেশ ঐতিহাসিক",
+  "app-guide-ethnic-group": "জাতিগত সদস্য",
   "app-guide-language": "ভাষা",
   "app-guide-national-park": "জাতীয় উদ্যান",
   "app-guide-mammal": "স্তন্যপায়ী",
@@ -215,27 +219,27 @@
   "app-guide-algae": "শৈবাল",
   "app-guide-fungus": "ছত্রাক",
   "app-guide-bacterium": "ব্যাকটেরিয়া",
-  "app-guide-virus": "ভাইরাস",
-  "app-guide-featured-article": "বৈশিষ্ট্যযুক্ত নিবন্ধ",
+  "app-guide-virus": "নাইট",
+  "app-guide-featured-article": "বৈশিষ্ট্যযুক্ত পোর্ট",
   "app-guide-help": "সাহায্য",
   "app-guide-sea": "সমুদ্র",
   "app-guide-continent": "মহাদেশ",
-  "app-guide-bioregion": "জৈব অঞ্চল",
+  "app-guide-bioregion": "জৈব শহর",
   "app-guide-mountain-range": "পর্বতমালা",
   "app-guide-disease": "রোগ",
   "app-guide-protein": "প্রোটিন",
   "app-guide-atom": "পরমাণু",
-  "app-guide-protist": "প্রতিবাদী",
-  "app-guide-country-map": "দেশের মানচিত্র",
+  "app-guide-protist": "আন্দোলনকারী",
+  "app-guide-country-map": "দেশ মানচিত্র",
   "app-guide-capital": "মূলধন",
-  "app-guide-form-of-government": "gov এর ফর্ম",
+  "app-guide-form-of-government": "gov এর সুবিধা",
   "app-guide-religion": "ধর্ম",
   "app-guide-period": "সময়কাল",
   "app-guide-history-aspect": "ইতিহাসের দিক",
   "app-guide-revolution": "বিপ্লব",
   "app-guide-war": "যুদ্ধ",
   "app-guide-battle": "যুদ্ধ",
-  "app-guide-documentary-title": "ডকুমেন্টারি শিরোনাম",
+  "app-guide-documentary-title": "ডকুমারি শিরোনাম",
   "app-guide-film-title": "চলচ্চিত্র শিরোনাম",
   "app-guide-art-movement": "শিল্প আন্দোলন",
   "app-guide-composer": "সুরকার",
@@ -243,12 +247,12 @@
   "app-guide-poet": "কবি",
   "app-guide-philosopher": "দার্শনিক",
   "app-guide-architect": "স্থপতি",
-  "app-guide-inventor": "উদ্ভাবক",
-  "app-guide-software": "সফটওয়্যার",
+  "app-guide-inventor": "উদ্ভাবন",
+  "app-guide-software": "সফটওয়ার",
   "app-guide-mathematics": "অংক",
-  "app-guide-tourist-attraction": "পর্যটকদের আকর্ষণ",
+  "app-guide-tourist-attraction": "রাজ্যদের",
   "app-guide-dish": "থালা",
-  "app-guide-cell-type": "কোষের ধরন",
+  "app-guide-cell-type": "বন্ধুর ধরন",
   "app-guide-archae": "archae",
   "app-guide-featured-portal": "বৈশিষ্ট্যযুক্ত পোর্টাল",
   "app-guide-musical-instrument": "যন্ত্র",
@@ -258,12 +262,12 @@
   "app-guide-newspapers": "সংবাদপত্র",
   "app-guide-radio-map": "রেডিও মানচিত্র",
   "app-guide-news-radio": "রেডিও",
-  "app-guide-live-tv": "সরাসরি সম্প্রচার",
-  "app-guide-news-tv": "টেলিভিশন",
+  "app-guide-live-tv": "প্রচার সম্প্রচার",
+  "app-guide-news-tv": "টিভি",
   "app-guide-news-economic-indicators": "অর্থনৈতিক সূচক",
   "app-guide-world-statistics": "উন্নয়ন প্রবণতা",
-  "app-guide-conflict-map": "দ্বন্দ্ব মানচিত্র",
-  "app-guide-ongoing-conflicts": "দ্বন্দ্ব",
+  "app-guide-conflict-map": "আসন মানচিত্র",
+  "app-guide-ongoing-conflicts": "আসন",
   "app-guide-radio": "রেডিও",
-  "app-foo": "foo বার baz"
+  "app-foo": "foo=বাজ"
 }
