--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "pàgines",
   "app-title-citations": "Citacions",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Claus API",
+  "app-menu-search-in": "buscar-hi",
+  "app-menu-search-in-option-reference": "obres de referència",
+  "app-menu-search-in-option-culture": "cultura",
+  "app-menu-search-in-option-science": "ciència",
+  "app-menu-search-in-option-business": "negocis",
+  "app-menu-filter-by": "filtrar per",
+  "app-menu-filter-by-option-text": "text",
+  "app-menu-filter-by-option-image": "imatge",
+  "app-menu-filter-by-option-video": "vídeo",
+  "app-menu-filter-by-option-audio": "àudio",
+  "app-menu-filter-by-option-data": "dades",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "programari",
+  "app-menu-filter-by-option-archive": "Arxiu",
+  "app-menu-filter-by-option-entity": "entitat",
+  "app-menu-filter-by-year-range": "interval d'anys",
+  "app-menu-nature-location-quiz": "qüestionari d'ubicació de la natura",
+  "app-menu-sort-by": "Ordenar per",
+  "app-menu-sort-by-option-relevance-desc": "rellevància ↓",
+  "app-menu-sort-by-option-relevance-asc": "rellevància ↑",
+  "app-menu-sort-by-option-date-desc": "data ↓",
+  "app-menu-sort-by-option-date-asc": "data ↑",
+  "app-menu-sort-by-option-update-desc": "actualització ↓",
+  "app-menu-sort-by-option-update-asc": "actualització ↑",
+  "app-menu-sort-by-option-random": "aleatòria",
+  "app-menu-sort-by-option-citations-desc": "cites ↓",
+  "app-menu-sort-by-option-citations-asc": "cites ↑",
+  "app-menu-sort-by-option-title-asc": "títol ↑",
+  "app-menu-sort-by-option-title-desc": "títol ↓",
+  "app-menu-sort-by-option-distance-asc": "distància ↑",
+  "app-menu-sort-by-option-distance-desc": "distància ↓",
   "app-menu-actions": "accions",
   "app-menu-background-audio": "àudio",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "llenguatge de la interfície",
   "app-menu-voice": "veu",
+  "app-menu-show-inline-help": "mostra l'ajuda en línia",
+  "app-menu-inline-help": "ajuda en línia",
   "app-menu-user-manual": "manual d'usuari",
   "app-menu-keyboard-shortcuts": "dreceres de teclat",
   "app-menu-credits": "crèdits",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "commuta la pantalla completa",
   "app-menu-bookmark-actions": "accions de selecció de marcadors",
   "app-menu-bookmark-actions-reasoning": "raonament",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "mitjans de comunicació",
+  "app-menu-bookmark-current-view": "marca la vista actual",
+  "app-menu-add-bookmark": "afegir Punt de llibre",
+  "app-menu-add-bookmark-title": "títol",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "imatges",
+  "app-menu-add-bookmark-clear-files": "esborra els fitxers",
+  "app-menu-add-bookmark-submit": "afegir Punt de llibre",
   "app-menu-import-as": "importar adreces d'interès",
   "app-menu-export-as": "exportar adreces d'interès",
-  "app-menu-bookmark-actions-media": "mitjans de comunicació",
   "app-menu-upload-json": "carregar",
-  "app-menu-bookmark-current-view": "marca la vista actual",
   "app-menu-visual-search": "cerca visual",
   "app-menu-reading-assistance": "ajuda a la lectura",
   "app-menu-bread": "inici de paraula en negreta",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "Brea",
   "app-menu-fullscreen-active-pane": "pantalla completa el panell actiu",
   "app-menu-toggle-sidebar": "alterna la barra lateral",
-  "app-menu-add-bookmark": "afegir Punt de llibre",
   "app-menu-note-1": "nota 1: només disponible quan el focus es troba a la barra lateral o al panell d'articles de la Viquipèdia.",
   "app-menu-features": "característiques",
   "app-menu-persona": "persona",
   "app-menu-country-select": "país",
   "app-menu-interests": "interessos",
-  "app-menu-nature-location-quiz": "qüestionari d'ubicació de la natura",
   "app-menu-command-editor": "editor d'ordres",
   "app-menu-presentation": "presentació",
   "app-menu-editor": "editor",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "aneu al panell anterior",
   "app-menu-new-search": "nova cerca",
   "app-menu-structured-search": "cerca estructurada",
-  "app-menu-geospatial-search": "cerca geogràfica",
+  "app-menu-geospatial-search": "recerca geoespacial",
   "app-section-main": "principal",
   "app-section-info": "informació",
   "app-section-library": "biblioteca",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "minerologia",
   "app-section-science-archeology": "arqueologia",
   "app-section-science-mathematics": "matemàtiques",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomia",
+  "app-section-science-physics": "física",
+  "app-section-science-computing": "informàtica",
   "app-section-media-datasets": "conjunts de dades",
   "app-section-media-datasets-general": "general",
   "app-section-media-datasets-topical": "d'actualitat",
