--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "mga panid",
   "app-title-citations": "Mga kinutlo",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
+  "app-menu-api-keys": "Mga yawe sa API",
+  "app-menu-search-in": "pangitaa sa",
+  "app-menu-search-in-option-reference": "reperensiya nga mga buhat",
+  "app-menu-search-in-option-culture": "kultura",
+  "app-menu-search-in-option-science": "siyensya",
+  "app-menu-search-in-option-business": "negosyo",
+  "app-menu-filter-by": "filter pinaagi sa",
+  "app-menu-filter-by-option-text": "text",
+  "app-menu-filter-by-option-image": "hulagway",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "audio",
+  "app-menu-filter-by-option-data": "datos",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "archive",
+  "app-menu-filter-by-option-entity": "entidad",
+  "app-menu-filter-by-year-range": "tuig range",
+  "app-menu-nature-location-quiz": "quiz sa lokasyon sa kinaiyahan",
+  "app-menu-sort-by": "paghan-ay pinaagi sa",
+  "app-menu-sort-by-option-relevance-desc": "kalambigitan ↓",
+  "app-menu-sort-by-option-relevance-asc": "kalambigitan ↑",
+  "app-menu-sort-by-option-date-desc": "petsa ↓",
+  "app-menu-sort-by-option-date-asc": "petsa ↑",
   "app-menu-sort-by-option-update-desc": "update ↓",
+  "app-menu-sort-by-option-update-asc": "update ↑",
   "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-sort-by-option-citations-desc": "mga citation ↓",
+  "app-menu-sort-by-option-citations-asc": "mga citation ↑",
+  "app-menu-sort-by-option-title-asc": "titulo ↑",
+  "app-menu-sort-by-option-title-desc": "titulo ↓",
+  "app-menu-sort-by-option-distance-asc": "gilay-on ↑",
+  "app-menu-sort-by-option-distance-desc": "gilay-on ↓",
   "app-menu-actions": "mga aksyon",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "interface nga pinulongan",
   "app-menu-voice": "tingog",
+  "app-menu-show-inline-help": "ipakita inline nga tabang",
+  "app-menu-inline-help": "inline nga tabang",
   "app-menu-user-manual": "manwal sa paggamit",
   "app-menu-keyboard-shortcuts": "mga keyboard shortcut",
   "app-menu-credits": "mga kredito",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "i-toggle ang fullscreen",
   "app-menu-bookmark-actions": "mga aksyon sa pagpili sa bookmark",
   "app-menu-bookmark-actions-reasoning": "pangatarungan",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
+  "app-menu-add-bookmark": "idugang ang bookmark",
+  "app-menu-add-bookmark-title": "titulo",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "mga larawan",
+  "app-menu-add-bookmark-clear-files": "tin-aw nga mga file",
+  "app-menu-add-bookmark-submit": "idugang ang bookmark",
   "app-menu-import-as": "import nga mga bookmark",
   "app-menu-export-as": "i-eksport ang mga bookmark",
-  "app-menu-bookmark-actions-media": "media",
   "app-menu-upload-json": "upload",
-  "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-visual-search": "biswal nga pagpangita",
   "app-menu-reading-assistance": "tabang sa pagbasa",
   "app-menu-bread": "pulong-pagsugod bolding",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "pitch",
   "app-menu-fullscreen-active-pane": "fullscreen ang aktibong pane",
   "app-menu-toggle-sidebar": "i-toggle ang sidebar",
-  "app-menu-add-bookmark": "idugang ang bookmark",
   "app-menu-note-1": "nota 1: magamit lang kung ang focus kay naa sa sidebar o sa pane sa artikulo sa Wikipedia.",
   "app-menu-features": "mga bahin",
   "app-menu-persona": "persona",
   "app-menu-country-select": "nasud",
   "app-menu-interests": "interes",
-  "app-menu-nature-location-quiz": "quiz sa lokasyon sa kinaiyahan",
   "app-menu-command-editor": "command editor",
   "app-menu-presentation": "presentasyon",
   "app-menu-editor": "editor",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "adto sa miaging pane",
   "app-menu-new-search": "bag-ong pagpangita",
   "app-menu-structured-search": "structured nga pagpangita",
-  "app-menu-geospatial-search": "geographic nga pagpangita",
+  "app-menu-geospatial-search": "geospatial nga pagpangita",
   "app-section-main": "nag-una",
   "app-section-info": "impormasyon",
   "app-section-library": "librarya",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralology",
   "app-section-science-archeology": "arkeolohiya",
   "app-section-science-mathematics": "matematika",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomiya",
+  "app-section-science-physics": "pisika",
+  "app-section-science-computing": "pagkompyut",
   "app-section-media-datasets": "mga dataset",
   "app-section-media-datasets-general": "heneral",
   "app-section-media-datasets-topical": "topical",
@@ -178,7 +191,7 @@
   "app-section-society-events": "mga panghitabo",
   "app-section-society-shopping": "pagpamalit",
   "app-guide-bookmarks-selected": "gipili",
-  "app-guide-bookmarks-deselect-all": "buwagi ang tanan",
+  "app-guide-bookmarks-deselect-all": "ayaw pagpili sa tanan",
   "app-guide-bookmark-teach-topics": "tudloi ko",
   "app-guide-bookmark-quiz-topics": "quiz nako",
   "app-guide-bookmark-related-topics": "may kalabutan nga mga hilisgutan",
