--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "stránky",
   "app-title-citations": "Citace",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
+  "app-menu-api-keys": "API klíče",
+  "app-menu-search-in": "Hledejte v",
+  "app-menu-search-in-option-reference": "referenční práce",
+  "app-menu-search-in-option-culture": "kultura",
+  "app-menu-search-in-option-science": "Věda",
+  "app-menu-search-in-option-business": "podnikání",
+  "app-menu-filter-by": "filtrovat podle",
+  "app-menu-filter-by-option-text": "text",
+  "app-menu-filter-by-option-image": "obraz",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "Zvuk",
+  "app-menu-filter-by-option-data": "data",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "archiv",
+  "app-menu-filter-by-option-entity": "entita",
+  "app-menu-filter-by-year-range": "roční rozsah",
+  "app-menu-nature-location-quiz": "kvíz o poloze v přírodě",
+  "app-menu-sort-by": "seřazeno podle",
   "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
   "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-sort-by-option-date-desc": "datum ↓",
+  "app-menu-sort-by-option-date-asc": "datum ↑",
+  "app-menu-sort-by-option-update-desc": "aktualizace ↓",
+  "app-menu-sort-by-option-update-asc": "aktualizace ↑",
+  "app-menu-sort-by-option-random": "náhodný",
+  "app-menu-sort-by-option-citations-desc": "citace ↓",
+  "app-menu-sort-by-option-citations-asc": "citace ↑",
+  "app-menu-sort-by-option-title-asc": "název ↑",
+  "app-menu-sort-by-option-title-desc": "název ↓",
+  "app-menu-sort-by-option-distance-asc": "vzdálenost ↑",
+  "app-menu-sort-by-option-distance-desc": "vzdálenost ↓",
   "app-menu-actions": "akce",
   "app-menu-background-audio": "Zvuk",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "téma",
   "app-menu-interface-language": "jazyk rozhraní",
   "app-menu-voice": "hlas",
+  "app-menu-show-inline-help": "zobrazit inline nápovědu",
+  "app-menu-inline-help": "inline nápověda",
   "app-menu-user-manual": "uživatelský manuál",
   "app-menu-keyboard-shortcuts": "klávesové zkratky",
   "app-menu-credits": "kredity",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "přepnout na celou obrazovku",
   "app-menu-bookmark-actions": "akce výběru záložek",
   "app-menu-bookmark-actions-reasoning": "uvažování",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "média",
+  "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
+  "app-menu-add-bookmark": "přidat záložku",
+  "app-menu-add-bookmark-title": "titul",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "snímky",
+  "app-menu-add-bookmark-clear-files": "vymazat soubory",
+  "app-menu-add-bookmark-submit": "přidat záložku",
   "app-menu-import-as": "importovat záložky",
   "app-menu-export-as": "exportovat záložky",
-  "app-menu-bookmark-actions-media": "média",
   "app-menu-upload-json": "nahrát",
-  "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
   "app-menu-visual-search": "vizuální vyhledávání",
   "app-menu-reading-assistance": "pomoc při čtení",
   "app-menu-bread": "tučné písmo na začátku slova",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "hřiště",
   "app-menu-fullscreen-active-pane": "celoobrazovkový aktivní panel",
   "app-menu-toggle-sidebar": "přepnout postranní panel",
-  "app-menu-add-bookmark": "přidat záložku",
   "app-menu-note-1": "poznámka 1: k dispozici pouze tehdy, když je fokus na postranním panelu nebo v podokně článků Wikipedie.",
   "app-menu-features": "funkce",
   "app-menu-persona": "persona",
   "app-menu-country-select": "země",
   "app-menu-interests": "zájmy",
-  "app-menu-nature-location-quiz": "kvíz o poloze v přírodě",
   "app-menu-command-editor": "příkazový editor",
   "app-menu-presentation": "prezentace",
   "app-menu-editor": "editor",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "přejděte na předchozí panel",
   "app-menu-new-search": "nové hledání",
   "app-menu-structured-search": "strukturované vyhledávání",
-  "app-menu-geospatial-search": "geografické vyhledávání",
+  "app-menu-geospatial-search": "geoprostorové vyhledávání",
   "app-section-main": "hlavní",
   "app-section-info": "info",
   "app-section-library": "knihovna",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralogii",
   "app-section-science-archeology": "archeologie",
   "app-section-science-mathematics": "matematika",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomie",
+  "app-section-science-physics": "fyzika",
+  "app-section-science-computing": "výpočetní",
   "app-section-media-datasets": "datové sady",
   "app-section-media-datasets-general": "Všeobecné",
   "app-section-media-datasets-topical": "aktuální",
