--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "sider",
   "app-title-citations": "Citater",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API nøgler",
+  "app-menu-search-in": "søg ind",
+  "app-menu-search-in-option-reference": "opslagsværker",
+  "app-menu-search-in-option-culture": "kultur",
+  "app-menu-search-in-option-science": "videnskab",
+  "app-menu-search-in-option-business": "forretning",
+  "app-menu-filter-by": "Sorter efter",
+  "app-menu-filter-by-option-text": "tekst",
+  "app-menu-filter-by-option-image": "billede",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "lyd",
+  "app-menu-filter-by-option-data": "data",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "arkiv",
+  "app-menu-filter-by-option-entity": "enhed",
+  "app-menu-filter-by-year-range": "årrække",
+  "app-menu-nature-location-quiz": "naturplaceringsquiz",
+  "app-menu-sort-by": "Sorter efter",
+  "app-menu-sort-by-option-relevance-desc": "relevans ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevans ↑",
+  "app-menu-sort-by-option-date-desc": "dato ↓",
+  "app-menu-sort-by-option-date-asc": "dato ↑",
+  "app-menu-sort-by-option-update-desc": "opdatering ↓",
+  "app-menu-sort-by-option-update-asc": "opdatering ↑",
+  "app-menu-sort-by-option-random": "tilfældig",
+  "app-menu-sort-by-option-citations-desc": "citater ↓",
+  "app-menu-sort-by-option-citations-asc": "citater ↑",
+  "app-menu-sort-by-option-title-asc": "titel ↑",
+  "app-menu-sort-by-option-title-desc": "titel ↓",
+  "app-menu-sort-by-option-distance-asc": "afstand ↑",
+  "app-menu-sort-by-option-distance-desc": "afstand ↓",
   "app-menu-actions": "handlinger",
   "app-menu-background-audio": "lyd",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "grænsefladesprog",
   "app-menu-voice": "stemme",
+  "app-menu-show-inline-help": "vis inline hjælp",
+  "app-menu-inline-help": "inline hjælp",
   "app-menu-user-manual": "brugermanual",
   "app-menu-keyboard-shortcuts": "tastaturgenveje",
   "app-menu-credits": "kreditter",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "skifte fuldskærm",
   "app-menu-bookmark-actions": "bogmærkevalgshandlinger",
   "app-menu-bookmark-actions-reasoning": "ræsonnement",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "medier",
+  "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
+  "app-menu-add-bookmark": "Tilføj bogmærke",
+  "app-menu-add-bookmark-title": "titel",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "billeder",
+  "app-menu-add-bookmark-clear-files": "rydde filer",
+  "app-menu-add-bookmark-submit": "Tilføj bogmærke",
   "app-menu-import-as": "importere bogmærker",
   "app-menu-export-as": "eksportere bogmærker",
-  "app-menu-bookmark-actions-media": "medier",
   "app-menu-upload-json": "upload",
-  "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
   "app-menu-visual-search": "visuel søgning",
   "app-menu-reading-assistance": "læsehjælp",
   "app-menu-bread": "ord-start fed skrift",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "tonehøjde",
   "app-menu-fullscreen-active-pane": "fuldskærm den aktive rude",
   "app-menu-toggle-sidebar": "skift sidebjælken",
-  "app-menu-add-bookmark": "tilføj bogmærke",
   "app-menu-note-1": "note 1: kun tilgængelig, når fokus er på sidebjælken eller en Wikipedia-artikelrude.",
   "app-menu-features": "funktioner",
   "app-menu-persona": "persona",
   "app-menu-country-select": "Land",
   "app-menu-interests": "interesser",
-  "app-menu-nature-location-quiz": "natur placerings quiz",
   "app-menu-command-editor": "kommando editor",
   "app-menu-presentation": "præsentation",
   "app-menu-editor": "redaktør",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "gå til forrige rude",
   "app-menu-new-search": "ny søgning",
   "app-menu-structured-search": "struktureret søgning",
-  "app-menu-geospatial-search": "geografisk søgning",
+  "app-menu-geospatial-search": "geospatial søgning",
   "app-section-main": "vigtigste",
   "app-section-info": "info",
   "app-section-library": "bibliotek",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "minerologi",
   "app-section-science-archeology": "arkæologi",
   "app-section-science-mathematics": "matematik",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
+  "app-section-science-physics": "fysik",
+  "app-section-science-computing": "edb",
   "app-section-media-datasets": "datasæt",
   "app-section-media-datasets-general": "generel",
   "app-section-media-datasets-topical": "aktuelt",
