--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -5,64 +5,49 @@
   "app-tab-tools-title": "Werkzeuge",
   "app-tab-settings-title": "Einstellungen",
   "app-tab-help-title": "helfen",
-  "app-tab-audio-chat-title": "audio-chat",
+  "app-tab-audio-chat-title": "Audio-Chat",
+  "app-notification-too-few-compare-topics": "Fügen Sie zunächst zwei oder mehr Themen zum Vergleich hinzu, indem Sie die Schaltfläche (oben im Wikipedia-Artikel und im Metabereich des Themas) verwenden.",
   "app-search-placeholder": "suchen",
-  "app-menu-geospatial-search": "geografische suche",
-  "app-menu-features": "Merkmale",
-  "app-menu-nature-location-quiz": "nature location quiz",
-  "app-menu-structured-search": "strukturierte suche",
+  "app-topics-found": "Themen gefunden",
   "app-title-occurence": "Vorkommenskarte",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "Seiten",
   "app-title-citations": "Zitate",
-  "app-guide-see-more": "Mehr sehen",
-  "app-guide-page": "Seite",
-  "app-guide-current-events": "aktuelle Ereignisse",
-  "app-guide-topic": "Thema",
-  "app-guide-artwork": "Malerei",
-  "app-guide-organism": "Organismus",
-  "app-guide-music": "Musik",
-  "app-guide-science": "Wissenschaft",
-  "app-topics-found": "Themen gefunden",
-  "app-section-main": "hauptsächlich",
-  "app-section-info": "die Info",
-  "app-section-library": "Bibliothek",
-  "app-section-web": "Netz",
-  "app-section-news": "Nachricht",
-  "app-section-news-general": "allgemein",
-  "app-section-social": "Sozial",
-  "app-section-news-tech": "Technik",
-  "app-section-society-jobs": "Arbeitsplätze",
-  "app-section-location": "Standort",
-  "app-section-location-geography": "Erdkunde",
-  "app-section-location-demography": "Demographie",
-  "app-section-location-ecology": "Ökologie",
-  "app-section-location-travel": "reisen",
-  "app-section-location-weather": "Wetter",
-  "app-section-location-real-estate": "Immobilie",
-  "app-menu-sort-by": "sortieren nach",
-  "app-menu-search-in": "suchen in",
-  "app-menu-search-in-option-reference": "nachschlagewerke",
   "app-menu-api-keys": "API-Schlüssel",
-  "app-menu-search-in-option-culture": "kulture",
-  "app-menu-search-in-option-science": "wissenschaft",
-  "app-menu-search-in-option-business": "geschäft",
-  "app-menu-sort-by-option-relevance-desc": "relevanz ↓",
-  "app-menu-sort-by-option-relevance-asc": "relevanz ↑",
-  "app-menu-sort-by-option-date-desc": "datum ↓",
-  "app-menu-sort-by-option-date-asc": "datum ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-search-in": "suchen in",
+  "app-menu-search-in-option-reference": "Nachschlagewerke",
+  "app-menu-search-in-option-culture": "Kultur",
+  "app-menu-search-in-option-science": "Wissenschaft",
+  "app-menu-search-in-option-business": "Geschäft",
+  "app-menu-filter-by": "Filtern nach",
+  "app-menu-filter-by-option-text": "Text",
+  "app-menu-filter-by-option-image": "Bild",
+  "app-menu-filter-by-option-video": "Video",
+  "app-menu-filter-by-option-audio": "Audio-",
+  "app-menu-filter-by-option-data": "Daten",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "Software",
+  "app-menu-filter-by-option-archive": "Archiv",
+  "app-menu-filter-by-option-entity": "juristische Person",
+  "app-menu-filter-by-year-range": "Jahresbereich",
+  "app-menu-nature-location-quiz": "Naturstandort-Quiz",
+  "app-menu-sort-by": "Sortieren nach",
+  "app-menu-sort-by-option-relevance-desc": "Relevanz ↓",
+  "app-menu-sort-by-option-relevance-asc": "Relevanz ↑",
+  "app-menu-sort-by-option-date-desc": "Datum ↓",
+  "app-menu-sort-by-option-date-asc": "Datum ↑",
+  "app-menu-sort-by-option-update-desc": "aktualisieren ↓",
+  "app-menu-sort-by-option-update-asc": "aktualisieren ↑",
+  "app-menu-sort-by-option-random": "zufällig",
+  "app-menu-sort-by-option-citations-desc": "Zitate ↓",
+  "app-menu-sort-by-option-citations-asc": "Zitate ↑",
+  "app-menu-sort-by-option-title-asc": "Titel ↑",
+  "app-menu-sort-by-option-title-desc": "Titel ↓",
+  "app-menu-sort-by-option-distance-asc": "Abstand ↑",
+  "app-menu-sort-by-option-distance-desc": "Abstand ↓",
   "app-menu-actions": "Aktionen",
-  "app-menu-background-audio": "Audio",
+  "app-menu-background-audio": "Audio-",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "Themenlisten",
   "app-menu-various-links": "diverse Links",
@@ -70,6 +55,8 @@
   "app-menu-theme": "Thema",
   "app-menu-interface-language": "Schnittstellensprache",
   "app-menu-voice": "Stimme",
+  "app-menu-show-inline-help": "Inline-Hilfe anzeigen",
+  "app-menu-inline-help": "Inline-Hilfe",
   "app-menu-user-manual": "Benutzerhandbuch",
   "app-menu-keyboard-shortcuts": "Tastatürkürzel",
   "app-menu-credits": "Credits",
@@ -80,35 +67,22 @@
   "app-menu-toggle-fullscreen": "Vollbild umschalten",
   "app-menu-bookmark-actions": "Aktionen zur Lesezeichenauswahl",
   "app-menu-bookmark-actions-reasoning": "Argumentation",
-  "app-guide-bookmark-teach-topics": "Lehre mich",
-  "app-guide-bookmark-quiz-topics": "Befrag mich",
-  "app-guide-bookmark-related-topics": "verwandte Themen",
-  "app-guide-bookmark-topic-differences": "Unterschiede",
-  "app-guide-bookmark-commonalities": "Gemeinsamkeiten",
-  "app-guide-bookmark-similarities": "Ähnlichkeiten",
-  "app-guide-bookmark-implications": "Implikationen",
-  "app-guide-bookmark-history": "Geschichte",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "Medien",
+  "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
+  "app-menu-add-bookmark": "Lesezeichen hinzufügen",
+  "app-menu-add-bookmark-title": "Titel",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "Bilder",
+  "app-menu-add-bookmark-clear-files": "klare Dateien",
+  "app-menu-add-bookmark-submit": "Lesezeichen hinzufügen",
   "app-menu-import-as": "Lesezeichen importieren",
   "app-menu-export-as": "Lesezeichen exportieren",
-  "app-menu-bookmark-actions-media": "Medien",
+  "app-menu-upload-json": "hochladen",
   "app-menu-visual-search": "visuelle Suche",
   "app-menu-reading-assistance": "Lesehilfe",
   "app-menu-bread": "Wortanfang in Fettschrift",
   "app-menu-ai-tutor": "KI-Tutor",
   "app-menu-datasources": "Datenquellen",
-  "app-guide-bookmarks-selected": "ausgewählt",
-  "app-guide-bookmarks-deselect-all": "Alle abwählen",
-  "app-menu-upload-json": "JSON hochladen",
-  "app-guide-radio-map": "Radiokarte",
-  "app-guide-world-statistics": "Weltstatistik",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
   "app-menu-clone-tab": "Registerkarte „Klonen“.",
   "app-menu-plant-identification": "Pflanzenidentifikation",
   "app-menu-text-identification": "Texterkennung",
@@ -128,8 +102,44 @@
   "app-menu-pitch": "Tonhöhe",
   "app-menu-fullscreen-active-pane": "Vollbild des aktiven Bereichs",
   "app-menu-toggle-sidebar": "Schalten Sie die Seitenleiste um",
-  "app-menu-add-bookmark": "Lesezeichen hinzufügen",
   "app-menu-note-1": "Hinweis 1: Nur verfügbar, wenn der Fokus auf der Seitenleiste oder einem Wikipedia-Artikelbereich liegt.",
+  "app-menu-features": "Merkmale",
+  "app-menu-persona": "Persona",
+  "app-menu-country-select": "Land",
+  "app-menu-interests": "Interessen",
+  "app-menu-command-editor": "Befehlseditor",
+  "app-menu-presentation": "Präsentation",
+  "app-menu-editor": "Editor",
+  "app-menu-run-code": "laufen",
+  "app-menu-clear-editor": "klar",
+  "app-menu-cover-topic": "Titelthema",
+  "app-menu-news": "Nachricht",
+  "app-menu-culture": "Kultur",
+  "app-menu-nature": "Natur",
+  "app-menu-license": "Lizenz",
+  "app-menu-goto-next-topic": "Gehe zum nächsten Thema (in den Seitenleistenergebnissen)",
+  "app-menu-goto-previous-topic": "Zum vorherigen Thema gehen (in den Seitenleistenergebnissen)",
+  "app-menu-goto-next-pane": "Gehen Sie zum nächsten Bereich",
+  "app-menu-goto-previous-pane": "Gehe zum vorherigen Bereich",
+  "app-menu-new-search": "neue Suche",
+  "app-menu-structured-search": "Strukturierte Suche",
+  "app-menu-geospatial-search": "Geodatensuche",
+  "app-section-main": "hauptsächlich",
+  "app-section-info": "die Info",
+  "app-section-library": "Bibliothek",
+  "app-section-web": "Netz",
+  "app-section-news": "Nachricht",
+  "app-section-news-general": "allgemein",
+  "app-section-social": "Sozial",
+  "app-section-news-tech": "Technik",
+  "app-section-society-jobs": "Arbeitsplätze",
+  "app-section-location": "Standort",
+  "app-section-location-geography": "Erdkunde",
+  "app-section-location-demography": "Demographie",
+  "app-section-location-ecology": "Ökologie",
+  "app-section-location-travel": "reisen",
+  "app-section-location-weather": "Wetter",
+  "app-section-location-real-estate": "Immobilie",
   "app-section-business": "Geschäft",
   "app-section-government": "Regierung",
   "app-section-government-general": "allgemein",
@@ -152,9 +162,9 @@
   "app-section-science-minerology": "Mineralologie",
   "app-section-science-archeology": "Archäologie",
   "app-section-science-mathematics": "Mathematik",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "Astronomie",
+  "app-section-science-physics": "Physik",
+  "app-section-science-computing": "Rechnen",
   "app-section-media-datasets": "Datensätze",
   "app-section-media-datasets-general": "allgemein",
   "app-section-media-datasets-topical": "aktuell",
@@ -162,7 +172,7 @@
   "app-section-library-general": "allgemein",
   "app-section-library-manuscripts": "Manuskripte",
   "app-section-library-history": "Geschichte",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "Philosophie",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
   "app-section-library-products": "Produkte",
@@ -175,19 +185,31 @@
   "app-section-society": "Gesellschaft",
   "app-section-society-sports": "Sport",
   "app-section-society-food": "Essen",
-  "app-section-library-philosophy": "Philosophie",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
   "app-section-library-identity": "Identität",
   "app-section-society-events": "Veranstaltungen",
-  "app-guide-welcome-text": "Conzept ist der Versuch, eine Enzyklopädie für das 21. Jahrhundert zu schaffen.  <br><br> Viel Spaß bei Ihren Erkundungen! ",
   "app-section-society-shopping": "Einkaufen",
-  "app-notification-too-few-compare-topics": "Fügen Sie zunächst zwei oder mehr Themen zum Vergleich hinzu, indem Sie die Schaltfläche (oben im Wikipedia-Artikel und im Metabereich des Themas) verwenden.",
-  "app-menu-goto-next-topic": "Gehe zum nächsten Thema (in den Seitenleistenergebnissen)",
-  "app-menu-goto-previous-topic": "Zum vorherigen Thema gehen (in den Seitenleistenergebnissen)",
-  "app-menu-goto-next-pane": "Gehen Sie zum nächsten Bereich",
-  "app-menu-goto-previous-pane": "Gehe zum vorherigen Bereich",
-  "app-menu-new-search": "neue Suche",
+  "app-guide-bookmarks-selected": "ausgewählt",
+  "app-guide-bookmarks-deselect-all": "Alle abwählen",
+  "app-guide-bookmark-teach-topics": "Lehre mich",
+  "app-guide-bookmark-quiz-topics": "Befrag mich",
+  "app-guide-bookmark-related-topics": "verwandte Themen",
+  "app-guide-bookmark-topic-differences": "Unterschiede",
+  "app-guide-bookmark-commonalities": "Gemeinsamkeiten",
+  "app-guide-bookmark-similarities": "Ähnlichkeiten",
+  "app-guide-bookmark-implications": "Implikationen",
+  "app-guide-bookmark-history": "Geschichte",
+  "app-guide-bookmark-gapminder-country-trend": "Ländertrend",
+  "app-guide-see-more": "Mehr sehen",
+  "app-guide-page": "Seite",
+  "app-guide-current-events": "aktuelle Ereignisse",
+  "app-guide-topic": "Thema",
+  "app-guide-artwork": "Malerei",
+  "app-guide-organism": "Organismus",
+  "app-guide-music": "Musik",
+  "app-guide-science": "Wissenschaft",
+  "app-guide-welcome-text": "Conzept ist der Versuch, eine Enzyklopädie für das 21. Jahrhundert zu schaffen.  <br><br> Viel Spaß bei Ihren Erkundungen! ",
   "app-guide-documentary": "Dokumentarfilm",
   "app-guide-country": "Land",
   "app-guide-string-search": "String-Suche",
@@ -207,12 +229,7 @@
   "app-guide-fungus": "Pilz",
   "app-guide-bacterium": "Bakterium",
   "app-guide-virus": "Virus",
-  "app-guide-featured-article": "gesponserter Artikel",
-  "app-menu-cover-topic": "Titelthema",
-  "app-menu-news": "Nachricht",
-  "app-menu-culture": "Kultur",
-  "app-menu-nature": "Natur",
-  "app-menu-license": "Lizenz",
+  "app-guide-featured-article": "vorgestelltes Artikel",
   "app-guide-help": "helfen",
   "app-guide-sea": "Meer",
   "app-guide-continent": "Kontinent",
@@ -246,25 +263,20 @@
   "app-guide-dish": "Gericht",
   "app-guide-cell-type": "Zelltyp",
   "app-guide-archae": "Archae",
-  "app-menu-persona": "Persona",
   "app-guide-featured-portal": "vorgestelltes Portal",
   "app-guide-musical-instrument": "Instrument",
   "app-guide-technology": "Technologie",
   "app-guide-near-me": "in meiner Nähe",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "Zeitungen",
+  "app-guide-radio-map": "Radiokarte",
   "app-guide-news-radio": "Radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "Live Fernsehen",
   "app-guide-news-tv": "Fernseher",
   "app-guide-news-economic-indicators": "Ökonomische Indikatoren",
+  "app-guide-world-statistics": "Entwicklungstrends",
   "app-guide-conflict-map": "Konfliktkarte",
   "app-guide-ongoing-conflicts": "Konflikte",
   "app-guide-radio": "Radio",
-  "app-menu-country-select": "Land",
-  "app-menu-interests": "Interessen",
-  "app-menu-command-editor": "Befehlseditor",
-  "app-menu-presentation": "Präsentation",
-  "app-menu-editor": "Editor",
-  "app-menu-run-code": "laufen",
-  "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
