--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -24,6 +24,18 @@
   "app-menu-search-in-option-culture": "culture",
   "app-menu-search-in-option-science": "science",
   "app-menu-search-in-option-business": "business",
+  "app-menu-filter-by": "filter by",
+  "app-menu-filter-by-option-text": "text",
+  "app-menu-filter-by-option-image": "image",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "audio",
+  "app-menu-filter-by-option-data": "data",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "archive",
+  "app-menu-filter-by-option-entity": "entity",
+  "app-menu-filter-by-year-range": "year range",
+  "app-menu-nature-location-quiz": "nature location quiz",
   "app-menu-sort-by": "sort by",
   "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-sort-by-option-relevance-asc": "relevance ↑",
@@ -47,6 +59,8 @@
   "app-menu-theme": "theme",
   "app-menu-interface-language": "interface language",
   "app-menu-voice": "voice",
+  "app-menu-show-inline-help": "show inline help",
+  "app-menu-inline-help": "inline help",
   "app-menu-user-manual": "user manual",
   "app-menu-keyboard-shortcuts": "keyboard shortcuts",
   "app-menu-credits": "credits",
