--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "paginas",
   "app-title-citations": "Citas",
-  "app-menu-sort-by": "ordenar por",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Claves API",
+  "app-menu-search-in": "busca en",
+  "app-menu-search-in-option-reference": "la referencia funciona",
+  "app-menu-search-in-option-culture": "cultura",
+  "app-menu-search-in-option-science": "ciencia",
+  "app-menu-search-in-option-business": "negocio",
+  "app-menu-filter-by": "filtrado por",
+  "app-menu-filter-by-option-text": "texto",
+  "app-menu-filter-by-option-image": "imagen",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "audio",
+  "app-menu-filter-by-option-data": "datos",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "archivo",
+  "app-menu-filter-by-option-entity": "entidad",
+  "app-menu-filter-by-year-range": "rango de años",
+  "app-menu-nature-location-quiz": "prueba de ubicación de la naturaleza",
+  "app-menu-sort-by": "Ordenar por",
+  "app-menu-sort-by-option-relevance-desc": "relevancia ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevancia ↑",
+  "app-menu-sort-by-option-date-desc": "fecha ↓",
+  "app-menu-sort-by-option-date-asc": "fecha ↑",
+  "app-menu-sort-by-option-update-desc": "actualizar ↓",
+  "app-menu-sort-by-option-update-asc": "actualizar ↑",
+  "app-menu-sort-by-option-random": "aleatorio",
+  "app-menu-sort-by-option-citations-desc": "citas ↓",
+  "app-menu-sort-by-option-citations-asc": "citas ↑",
+  "app-menu-sort-by-option-title-asc": "título ↑",
+  "app-menu-sort-by-option-title-desc": "título ↓",
+  "app-menu-sort-by-option-distance-asc": "distancia ↑",
+  "app-menu-sort-by-option-distance-desc": "distancia ↓",
   "app-menu-actions": "comportamiento",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "midi",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "lenguaje de interfaz",
   "app-menu-voice": "voz",
+  "app-menu-show-inline-help": "mostrar ayuda en línea",
+  "app-menu-inline-help": "ayuda en línea",
   "app-menu-user-manual": "manual de usuario",
   "app-menu-keyboard-shortcuts": "atajos de teclado",
   "app-menu-credits": "créditos",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "alternar pantalla completa",
   "app-menu-bookmark-actions": "acciones de selección de marcadores",
   "app-menu-bookmark-actions-reasoning": "razonamiento",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "medios de comunicación",
+  "app-menu-bookmark-current-view": "marcar vista actual",
+  "app-menu-add-bookmark": "añadir marcador",
+  "app-menu-add-bookmark-title": "título",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "imágenes",
+  "app-menu-add-bookmark-clear-files": "borrar archivos",
+  "app-menu-add-bookmark-submit": "añadir marcador",
   "app-menu-import-as": "importar marcadores",
   "app-menu-export-as": "exportar marcadores",
-  "app-menu-bookmark-actions-media": "medios de comunicación",
   "app-menu-upload-json": "subir",
-  "app-menu-bookmark-current-view": "marcar vista actual",
   "app-menu-visual-search": "búsqueda visual",
   "app-menu-reading-assistance": "asistencia de lectura",
   "app-menu-bread": "negrita de inicio de palabra",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "paso",
   "app-menu-fullscreen-active-pane": "pantalla completa el panel activo",
   "app-menu-toggle-sidebar": "alternar la barra lateral",
-  "app-menu-add-bookmark": "añadir marcador",
   "app-menu-note-1": "nota 1: solo está disponible cuando el foco está en la barra lateral o en el panel de un artículo de Wikipedia.",
   "app-menu-features": "características",
   "app-menu-persona": "persona",
   "app-menu-country-select": "país",
   "app-menu-interests": "intereses",
-  "app-menu-nature-location-quiz": "prueba de ubicación de la naturaleza",
   "app-menu-command-editor": "editor de comandos",
   "app-menu-presentation": "presentación",
   "app-menu-editor": "editor",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "ir al panel anterior",
   "app-menu-new-search": "nueva búsqueda",
   "app-menu-structured-search": "búsqueda estructurada",
-  "app-menu-geospatial-search": "búsqueda geográfica",
+  "app-menu-geospatial-search": "búsqueda geoespacial",
   "app-section-main": "principal",
   "app-section-info": "información",
   "app-section-library": "biblioteca",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralogía",
   "app-section-science-archeology": "arqueología",
   "app-section-science-mathematics": "matemáticas",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomía",
+  "app-section-science-physics": "física",
+  "app-section-science-computing": "informática",
   "app-section-media-datasets": "conjuntos de datos",
   "app-section-media-datasets-general": "general",
   "app-section-media-datasets-topical": "actual",
