--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -14,26 +14,38 @@
   "app-title-sub": "زیر",
   "app-title-pages": "صفحات",
   "app-title-citations": "استناد",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "کلیدهای API",
+  "app-menu-search-in": "جستجو در",
+  "app-menu-search-in-option-reference": "آثار مرجع",
+  "app-menu-search-in-option-culture": "فرهنگ",
+  "app-menu-search-in-option-science": "علوم پایه",
+  "app-menu-search-in-option-business": "کسب و کار",
+  "app-menu-filter-by": "محدود شده توسط",
+  "app-menu-filter-by-option-text": "متن",
+  "app-menu-filter-by-option-image": "تصویر",
+  "app-menu-filter-by-option-video": "ویدئو",
+  "app-menu-filter-by-option-audio": "سمعی",
+  "app-menu-filter-by-option-data": "داده ها",
+  "app-menu-filter-by-option-3D": "سه بعدی",
+  "app-menu-filter-by-option-software": "نرم افزار",
+  "app-menu-filter-by-option-archive": "بایگانی",
+  "app-menu-filter-by-option-entity": "وجود، موجودیت",
+  "app-menu-filter-by-year-range": "محدوده سال",
+  "app-menu-nature-location-quiz": "مسابقه مکان یابی طبیعت",
+  "app-menu-sort-by": "مرتب سازی بر اساس",
+  "app-menu-sort-by-option-relevance-desc": "ارتباط ↓",
+  "app-menu-sort-by-option-relevance-asc": "ارتباط ↑",
+  "app-menu-sort-by-option-date-desc": "تاریخ ↓",
+  "app-menu-sort-by-option-date-asc": "تاریخ ↑",
+  "app-menu-sort-by-option-update-desc": "به روز رسانی ↓",
+  "app-menu-sort-by-option-update-asc": "به روز رسانی ↑",
+  "app-menu-sort-by-option-random": "تصادفی",
+  "app-menu-sort-by-option-citations-desc": "نقل قول ها ↓",
+  "app-menu-sort-by-option-citations-asc": "نقل قول ها ↑",
+  "app-menu-sort-by-option-title-asc": "عنوان ↑",
+  "app-menu-sort-by-option-title-desc": "عنوان ↓",
+  "app-menu-sort-by-option-distance-asc": "فاصله ↑",
+  "app-menu-sort-by-option-distance-desc": "فاصله ↓",
   "app-menu-actions": "اقدامات",
   "app-menu-background-audio": "سمعی",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "موضوع",
   "app-menu-interface-language": "زبان رابط",
   "app-menu-voice": "صدا",
+  "app-menu-show-inline-help": "نشان دادن کمک درون خطی",
+  "app-menu-inline-help": "کمک درون خطی",
   "app-menu-user-manual": "راهنمای کاربری",
   "app-menu-keyboard-shortcuts": "میانبرهای صفحه کلید",
   "app-menu-credits": "وام",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "تمام صفحه را تغییر دهید",
   "app-menu-bookmark-actions": "اقدامات انتخاب نشانک",
   "app-menu-bookmark-actions-reasoning": "استدلال",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "رسانه ها",
+  "app-menu-bookmark-current-view": "نمای فعلی نشانک",
+  "app-menu-add-bookmark": "اضافه کردن نشانه",
+  "app-menu-add-bookmark-title": "عنوان",
+  "app-menu-add-bookmark-url": "آدرس اینترنتی",
+  "app-menu-add-bookmark-images": "تصاویر",
+  "app-menu-add-bookmark-clear-files": "پاک کردن فایل ها",
+  "app-menu-add-bookmark-submit": "اضافه کردن نشانه",
   "app-menu-import-as": "وارد کردن نشانک ها",
   "app-menu-export-as": "صادرات نشانک ها",
-  "app-menu-bookmark-actions-media": "رسانه ها",
   "app-menu-upload-json": "بارگذاری",
-  "app-menu-bookmark-current-view": "نمای فعلی نشانک",
   "app-menu-visual-search": "جستجوی بصری",
   "app-menu-reading-assistance": "کمک خواندن",
   "app-menu-bread": "پررنگ کردن کلمه شروع کنید",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "گام صدا",
   "app-menu-fullscreen-active-pane": "صفحه فعال تمام صفحه",
   "app-menu-toggle-sidebar": "نوار کناری را تغییر دهید",
-  "app-menu-add-bookmark": "اضافه کردن نشانه",
   "app-menu-note-1": "توجه 1: فقط زمانی در دسترس است که تمرکز روی نوار کناری یا صفحه مقاله ویکی‌پدیا باشد.",
   "app-menu-features": "امکانات",
   "app-menu-persona": "شخصیت",
   "app-menu-country-select": "کشور",
   "app-menu-interests": "منافع",
-  "app-menu-nature-location-quiz": "مسابقه مکان یابی طبیعت",
   "app-menu-command-editor": "ویرایشگر فرمان",
   "app-menu-presentation": "ارائه",
   "app-menu-editor": "ویرایشگر",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "به صفحه قبلی بروید",
   "app-menu-new-search": "جستجوی جدید",
   "app-menu-structured-search": "جستجوی ساختار یافته",
-  "app-menu-geospatial-search": "جستجوی جغرافیایی",
+  "app-menu-geospatial-search": "جستجوی مکانی",
   "app-section-main": "اصلی",
   "app-section-info": "اطلاعات",
   "app-section-library": "کتابخانه",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "معدن شناسی",
   "app-section-science-archeology": "باستان شناسی",
   "app-section-science-mathematics": "ریاضیات",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "ستاره شناسی",
+  "app-section-science-physics": "فیزیک",
+  "app-section-science-computing": "محاسبه",
   "app-section-media-datasets": "مجموعه داده ها",
   "app-section-media-datasets-general": "عمومی",
   "app-section-media-datasets-topical": "موضعی",
