--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -14,6 +14,11 @@
   "app-title-sub": "sub",
   "app-title-pages": "sivuja",
   "app-title-citations": "Lainaukset",
+  "app-menu-filter-by": "filter by",
+  "app-menu-filter-by-year-range": "year range",
+  "app-menu-show-inline-help": "show inline help",
+  "app-menu-inline-help": "inline help",
+  "app-menu-nature-location-quiz": "nature location quiz",
   "app-menu-sort-by": "sort by",
   "app-menu-search-in": "search in",
   "app-menu-search-in-option-reference": "reference",
