--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "shafuka",
   "app-title-citations": "ambato",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Maɓallan API",
+  "app-menu-search-in": "bincika a ciki",
+  "app-menu-search-in-option-reference": "ayyukan tunani",
+  "app-menu-search-in-option-culture": "al'ada",
+  "app-menu-search-in-option-science": "kimiyya",
+  "app-menu-search-in-option-business": "kasuwanci",
+  "app-menu-filter-by": "tace by",
+  "app-menu-filter-by-option-text": "rubutu",
+  "app-menu-filter-by-option-image": "hoto",
+  "app-menu-filter-by-option-video": "bidiyo",
+  "app-menu-filter-by-option-audio": "audio",
+  "app-menu-filter-by-option-data": "bayanai",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "rumbun adana bayanai",
+  "app-menu-filter-by-option-entity": "halitta",
+  "app-menu-filter-by-year-range": "zangon shekara",
+  "app-menu-nature-location-quiz": "kacici-kacici wurin yanayi",
+  "app-menu-sort-by": "kasa",
+  "app-menu-sort-by-option-relevance-desc": "dacewa ↓",
+  "app-menu-sort-by-option-relevance-asc": "dacewa ↑",
+  "app-menu-sort-by-option-date-desc": "kwanan wata ↓",
+  "app-menu-sort-by-option-date-asc": "kwanan wata ↑",
+  "app-menu-sort-by-option-update-desc": "sabunta ↓",
+  "app-menu-sort-by-option-update-asc": "sabunta ↑",
+  "app-menu-sort-by-option-random": "bazuwar",
+  "app-menu-sort-by-option-citations-desc": "ambato ↓",
+  "app-menu-sort-by-option-citations-asc": "ambato ↑",
+  "app-menu-sort-by-option-title-asc": "take ↑",
+  "app-menu-sort-by-option-title-desc": "take ↓",
+  "app-menu-sort-by-option-distance-asc": "nisa ↑",
+  "app-menu-sort-by-option-distance-desc": "nisa ↓",
   "app-menu-actions": "ayyuka",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "jigo",
   "app-menu-interface-language": "harshen mu'amala",
   "app-menu-voice": "murya",
+  "app-menu-show-inline-help": "nuna taimakon layi",
+  "app-menu-inline-help": "taimakon layi",
   "app-menu-user-manual": "littafin mai amfani",
   "app-menu-keyboard-shortcuts": "gajerun hanyoyin keyboard",
   "app-menu-credits": "daraja",
@@ -53,19 +67,20 @@
   "app-menu-toggle-fullscreen": "kunna cikakken allo",
   "app-menu-bookmark-actions": "alamar shafi-zaɓi ayyuka",
   "app-menu-bookmark-actions-reasoning": "tunani",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "kafofin watsa labarai",
+  "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
+  "app-menu-add-bookmark": "ƙara alamar shafi",
+  "app-menu-add-bookmark-title": "take",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "hotuna",
+  "app-menu-add-bookmark-clear-files": "share fayiloli",
+  "app-menu-add-bookmark-submit": "ƙara alamar shafi",
   "app-menu-import-as": "shigo da alamun shafi",
   "app-menu-export-as": "alamun fitarwa",
-  "app-menu-bookmark-actions-media": "kafofin watsa labarai",
   "app-menu-upload-json": "upload",
-  "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
   "app-menu-visual-search": "bincike na gani",
   "app-menu-reading-assistance": "taimakon karatu",
-  "app-menu-bread": "fara ƙarfin magana",
+  "app-menu-bread": "kalma-fara ƙarfin hali",
   "app-menu-ai-tutor": "AI mai koyarwa",
   "app-menu-datasources": "tushen bayanai",
   "app-menu-clone-tab": "clone tab",
@@ -84,16 +99,14 @@
   "app-menu-locale": "yankin",
   "app-menu-style": "salo",
   "app-menu-speed": "gudun",
-  "app-menu-pitch": "rawa",
+  "app-menu-pitch": "farar",
   "app-menu-fullscreen-active-pane": "cika allo mai aiki",
   "app-menu-toggle-sidebar": "kunna labarun gefe",
-  "app-menu-add-bookmark": "ƙara alamar shafi",
-  "app-menu-note-1": "bayanin kula 1: yana samuwa kawai lokacin da aka mayar da hankali kan labarun gefe ko ɓangaren labarin Wikipedia.",
+  "app-menu-note-1": "bayanin kula 1: ana samun kawai lokacin da aka mayar da hankali kan labarun gefe ko sashin labarin Wikipedia.",
   "app-menu-features": "fasali",
   "app-menu-persona": "mutum",
   "app-menu-country-select": "kasa",
   "app-menu-interests": "sha'awa",
-  "app-menu-nature-location-quiz": "kacici-kacici wurin yanayi",
   "app-menu-command-editor": "editan umarni",
   "app-menu-presentation": "gabatarwa",
   "app-menu-editor": "edita",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "je zuwa sashin da ya gabata",
   "app-menu-new-search": "sabon bincike",
   "app-menu-structured-search": "bincike mai tsari",
-  "app-menu-geospatial-search": "binciken yanki",
+  "app-menu-geospatial-search": "binciken geospatial",
   "app-section-main": "babba",
   "app-section-info": "bayani",
   "app-section-library": "ɗakin karatu",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "ma'adinai",
   "app-section-science-archeology": "ilmin kimiya na kayan tarihi",
   "app-section-science-mathematics": "ilmin lissafi",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "ilmin taurari",
+  "app-section-science-physics": "ilimin lissafi",
+  "app-section-science-computing": "kwamfuta",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "na gaba ɗaya",
   "app-section-media-datasets-topical": "Topical",
