--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -14,26 +14,38 @@
   "app-title-sub": "विषय",
   "app-title-pages": "पृष्ठों",
   "app-title-citations": "उद्धरण",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "एपीआई कुंजियाँ",
+  "app-menu-search-in": "की खोज में",
+  "app-menu-search-in-option-reference": "संदर्भ कार्य",
+  "app-menu-search-in-option-culture": "संस्कृति",
+  "app-menu-search-in-option-science": "विज्ञान",
+  "app-menu-search-in-option-business": "व्यापार",
+  "app-menu-filter-by": "फिल्टर के द्वारा",
+  "app-menu-filter-by-option-text": "मूलपाठ",
+  "app-menu-filter-by-option-image": "छवि",
+  "app-menu-filter-by-option-video": "वीडियो",
+  "app-menu-filter-by-option-audio": "ऑडियो",
+  "app-menu-filter-by-option-data": "डेटा",
+  "app-menu-filter-by-option-3D": "3डी",
+  "app-menu-filter-by-option-software": "सॉफ़्टवेयर",
+  "app-menu-filter-by-option-archive": "पुरालेख",
+  "app-menu-filter-by-option-entity": "इकाई",
+  "app-menu-filter-by-year-range": "वर्ष सीमा",
+  "app-menu-nature-location-quiz": "प्रकृति स्थान प्रश्नोत्तरी",
+  "app-menu-sort-by": "इसके अनुसार क्रमबद्ध करें",
+  "app-menu-sort-by-option-relevance-desc": "प्रासंगिकता ↓",
+  "app-menu-sort-by-option-relevance-asc": "प्रासंगिकता ↑",
+  "app-menu-sort-by-option-date-desc": "दिनांक ↓",
+  "app-menu-sort-by-option-date-asc": "दिनांक ↑",
+  "app-menu-sort-by-option-update-desc": "अद्यतन ↓",
+  "app-menu-sort-by-option-update-asc": "अद्यतन ↑",
+  "app-menu-sort-by-option-random": "यादृच्छिक",
+  "app-menu-sort-by-option-citations-desc": "उद्धरण ↓",
+  "app-menu-sort-by-option-citations-asc": "उद्धरण ↑",
+  "app-menu-sort-by-option-title-asc": "शीर्षक ↑",
+  "app-menu-sort-by-option-title-desc": "शीर्षक ↓",
+  "app-menu-sort-by-option-distance-asc": "दूरी ↑",
+  "app-menu-sort-by-option-distance-desc": "दूरी ↓",
   "app-menu-actions": "कार्रवाई",
   "app-menu-background-audio": "ऑडियो",
   "app-menu-background-midi": "मिडी",
@@ -43,6 +55,8 @@
   "app-menu-theme": "विषय",
   "app-menu-interface-language": "इंटरफ़ेस भाषा",
   "app-menu-voice": "आवाज़",
+  "app-menu-show-inline-help": "इनलाइन सहायता दिखाएं",
+  "app-menu-inline-help": "इनलाइन सहायता",
   "app-menu-user-manual": "उपयोगकर्ता पुस्तिका",
   "app-menu-keyboard-shortcuts": "कुंजीपटल अल्प मार्ग",
   "app-menu-credits": "क्रेडिट",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "संपूर्ण स्क्रीन टॉगल करें",
   "app-menu-bookmark-actions": "बुकमार्क-चयन क्रियाएँ",
   "app-menu-bookmark-actions-reasoning": "तर्क",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "मिडिया",
+  "app-menu-bookmark-current-view": "वर्तमान दृश्य को बुकमार्क करें",
+  "app-menu-add-bookmark": "बुकमार्क जोड़ें",
+  "app-menu-add-bookmark-title": "शीर्षक",
+  "app-menu-add-bookmark-url": "यूआरएल",
+  "app-menu-add-bookmark-images": "इमेजिस",
+  "app-menu-add-bookmark-clear-files": "फ़ाइलें साफ़ करें",
+  "app-menu-add-bookmark-submit": "बुकमार्क जोड़ें",
   "app-menu-import-as": "बुकमार्क आयात करें",
   "app-menu-export-as": "बुकमार्क निर्यात करें",
-  "app-menu-bookmark-actions-media": "मिडिया",
   "app-menu-upload-json": "डालना",
-  "app-menu-bookmark-current-view": "वर्तमान दृश्य को बुकमार्क करें",
   "app-menu-visual-search": "दृश्य खोज",
   "app-menu-reading-assistance": "पढ़ने में सहायता",
   "app-menu-bread": "शब्द-प्रारंभ बोल्डिंग",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "आवाज़ का उतार-चढ़ाव",
   "app-menu-fullscreen-active-pane": "सक्रिय फलक को पूर्णस्क्रीन करें",
   "app-menu-toggle-sidebar": "साइडबार को टॉगल करें",
-  "app-menu-add-bookmark": "बुकमार्क जोड़ें",
   "app-menu-note-1": "नोट 1: केवल तभी उपलब्ध है जब फोकस साइडबार या विकिपीडिया लेख फलक पर हो।",
   "app-menu-features": "विशेषताएँ",
   "app-menu-persona": "व्यक्तित्व",
   "app-menu-country-select": "देश",
   "app-menu-interests": "रूचियाँ",
-  "app-menu-nature-location-quiz": "प्रकृति स्थान प्रश्नोत्तरी",
   "app-menu-command-editor": "आदेश संपादक",
   "app-menu-presentation": "प्रस्तुति",
   "app-menu-editor": "संपादक",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "पिछले फलक पर जाएँ",
   "app-menu-new-search": "नई खोज",
   "app-menu-structured-search": "संरचित खोज",
-  "app-menu-geospatial-search": "भौगोलिक खोज",
+  "app-menu-geospatial-search": "भू-स्थानिक खोज",
   "app-section-main": "मुख्य",
   "app-section-info": "जानकारी",
   "app-section-library": "पुस्तकालय",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "खनिज विद्या",
   "app-section-science-archeology": "पुरातत्त्व",
   "app-section-science-mathematics": "अंक शास्त्र",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "खगोल",
+  "app-section-science-physics": "भौतिक विज्ञान",
+  "app-section-science-computing": "कम्प्यूटिंग",
   "app-section-media-datasets": "डेटासेट",
   "app-section-media-datasets-general": "सामान्य",
   "app-section-media-datasets-topical": "सामयिक",
