--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -14,26 +14,38 @@
   "app-title-sub": "pod",
   "app-title-pages": "stranice",
   "app-title-citations": "Citati",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API ključevi",
+  "app-menu-search-in": "tražiti u",
+  "app-menu-search-in-option-reference": "referentna djela",
+  "app-menu-search-in-option-culture": "Kultura",
+  "app-menu-search-in-option-science": "znanost",
+  "app-menu-search-in-option-business": "poslovanje",
+  "app-menu-filter-by": "filtrirati po",
+  "app-menu-filter-by-option-text": "tekst",
+  "app-menu-filter-by-option-image": "slika",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "audio",
+  "app-menu-filter-by-option-data": "podaci",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "softver",
+  "app-menu-filter-by-option-archive": "arhiva",
+  "app-menu-filter-by-option-entity": "entitet",
+  "app-menu-filter-by-year-range": "raspon godina",
+  "app-menu-nature-location-quiz": "kviz o lokaciji u prirodi",
+  "app-menu-sort-by": "poredati po",
+  "app-menu-sort-by-option-relevance-desc": "relevantnost ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevantnost ↑",
+  "app-menu-sort-by-option-date-desc": "datum ↓",
+  "app-menu-sort-by-option-date-asc": "datum ↑",
+  "app-menu-sort-by-option-update-desc": "ažurirati ↓",
+  "app-menu-sort-by-option-update-asc": "ažurirati ↑",
+  "app-menu-sort-by-option-random": "slučajan",
+  "app-menu-sort-by-option-citations-desc": "citati ↓",
+  "app-menu-sort-by-option-citations-asc": "citati ↑",
+  "app-menu-sort-by-option-title-asc": "naslov ↑",
+  "app-menu-sort-by-option-title-desc": "naslov ↓",
+  "app-menu-sort-by-option-distance-asc": "udaljenost ↑",
+  "app-menu-sort-by-option-distance-desc": "udaljenost ↓",
   "app-menu-actions": "akcije",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "jezik sučelja",
   "app-menu-voice": "glas",
+  "app-menu-show-inline-help": "prikaži ugrađenu pomoć",
+  "app-menu-inline-help": "inline pomoć",
   "app-menu-user-manual": "Korisnički priručnik",
   "app-menu-keyboard-shortcuts": "prečice na tipkovnici",
   "app-menu-credits": "krediti",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "prebaci preko cijelog zaslona",
   "app-menu-bookmark-actions": "akcije odabira oznaka",
   "app-menu-bookmark-actions-reasoning": "rasuđivanje",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "medijima",
+  "app-menu-bookmark-current-view": "označi trenutni prikaz",
+  "app-menu-add-bookmark": "dodaj oznaku",
+  "app-menu-add-bookmark-title": "titula",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "slike",
+  "app-menu-add-bookmark-clear-files": "očistiti datoteke",
+  "app-menu-add-bookmark-submit": "dodaj oznaku",
   "app-menu-import-as": "uvoz knjižnih oznaka",
   "app-menu-export-as": "izvoz oznaka",
-  "app-menu-bookmark-actions-media": "medijima",
   "app-menu-upload-json": "Učitaj",
-  "app-menu-bookmark-current-view": "označi trenutni prikaz",
   "app-menu-visual-search": "vizualno pretraživanje",
   "app-menu-reading-assistance": "pomoć u čitanju",
   "app-menu-bread": "početak riječi podebljano",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "nagib",
   "app-menu-fullscreen-active-pane": "preko cijelog zaslona aktivno okno",
   "app-menu-toggle-sidebar": "prebaci bočnu traku",
-  "app-menu-add-bookmark": "dodaj oznaku",
   "app-menu-note-1": "napomena 1: dostupno samo kada je fokus na bočnoj traci ili oknu s člankom na Wikipediji.",
   "app-menu-features": "značajke",
   "app-menu-persona": "persona",
   "app-menu-country-select": "zemlja",
   "app-menu-interests": "interesa",
-  "app-menu-nature-location-quiz": "kviz o lokaciji u prirodi",
   "app-menu-command-editor": "uređivač naredbi",
   "app-menu-presentation": "prezentacija",
   "app-menu-editor": "urednik",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "idi na prethodno okno",
   "app-menu-new-search": "nova pretraga",
   "app-menu-structured-search": "strukturirano pretraživanje",
-  "app-menu-geospatial-search": "geografsko pretraživanje",
+  "app-menu-geospatial-search": "geoprostorno pretraživanje",
   "app-section-main": "glavni",
   "app-section-info": "info",
   "app-section-library": "knjižnica",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralologija",
   "app-section-science-archeology": "arheologija",
   "app-section-science-mathematics": "matematika",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomija",
+  "app-section-science-physics": "fizika",
+  "app-section-science-computing": "računalstvo",
   "app-section-media-datasets": "skupovi podataka",
   "app-section-media-datasets-general": "Općenito",
   "app-section-media-datasets-topical": "aktualan",
