--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "pagine",
   "app-title-citations": "Citazioni",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Chiavi API",
+  "app-menu-search-in": "cerca nel",
+  "app-menu-search-in-option-reference": "opere di riferimento",
+  "app-menu-search-in-option-culture": "cultura",
+  "app-menu-search-in-option-science": "scienza",
+  "app-menu-search-in-option-business": "Attività commerciale",
+  "app-menu-filter-by": "filtra per",
+  "app-menu-filter-by-option-text": "testo",
+  "app-menu-filter-by-option-image": "Immagine",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "Audio",
+  "app-menu-filter-by-option-data": "dati",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "Software",
+  "app-menu-filter-by-option-archive": "archivio",
+  "app-menu-filter-by-option-entity": "entità",
+  "app-menu-filter-by-year-range": "intervallo di anni",
+  "app-menu-nature-location-quiz": "quiz sulla posizione della natura",
+  "app-menu-sort-by": "ordina per",
+  "app-menu-sort-by-option-relevance-desc": "rilevanza ↓",
+  "app-menu-sort-by-option-relevance-asc": "rilevanza ↑",
+  "app-menu-sort-by-option-date-desc": "data ↓",
+  "app-menu-sort-by-option-date-asc": "data ↑",
+  "app-menu-sort-by-option-update-desc": "aggiorna ↓",
+  "app-menu-sort-by-option-update-asc": "aggiornamento ↑",
+  "app-menu-sort-by-option-random": "casuale",
+  "app-menu-sort-by-option-citations-desc": "citazioni ↓",
+  "app-menu-sort-by-option-citations-asc": "citazioni ↑",
+  "app-menu-sort-by-option-title-asc": "titolo ↑",
+  "app-menu-sort-by-option-title-desc": "titolo ↓",
+  "app-menu-sort-by-option-distance-asc": "distanza ↑",
+  "app-menu-sort-by-option-distance-desc": "distanza ↓",
   "app-menu-actions": "Azioni",
   "app-menu-background-audio": "Audio",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "linguaggio dell'interfaccia",
   "app-menu-voice": "voce",
+  "app-menu-show-inline-help": "mostra la guida in linea",
+  "app-menu-inline-help": "aiuto in linea",
   "app-menu-user-manual": "Manuale d'uso",
   "app-menu-keyboard-shortcuts": "tasti rapidi",
   "app-menu-credits": "crediti",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "passare a schermo intero",
   "app-menu-bookmark-actions": "azioni di selezione dei segnalibri",
   "app-menu-bookmark-actions-reasoning": "ragionamento",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
+  "app-menu-add-bookmark": "Aggiungi segnalibro",
+  "app-menu-add-bookmark-title": "titolo",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "immagini",
+  "app-menu-add-bookmark-clear-files": "cancellare i file",
+  "app-menu-add-bookmark-submit": "Aggiungi segnalibro",
   "app-menu-import-as": "importare segnalibri",
   "app-menu-export-as": "esportare segnalibri",
-  "app-menu-bookmark-actions-media": "media",
   "app-menu-upload-json": "caricamento",
-  "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-visual-search": "ricerca visiva",
   "app-menu-reading-assistance": "assistenza alla lettura",
   "app-menu-bread": "inizio parola in grassetto",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "pece",
   "app-menu-fullscreen-active-pane": "a schermo intero il riquadro attivo",
   "app-menu-toggle-sidebar": "attiva/disattiva la barra laterale",
-  "app-menu-add-bookmark": "Aggiungi segnalibro",
   "app-menu-note-1": "nota 1: disponibile solo quando lo stato attivo è sulla barra laterale o sul riquadro di un articolo di Wikipedia.",
   "app-menu-features": "caratteristiche",
   "app-menu-persona": "persona",
   "app-menu-country-select": "Paese",
   "app-menu-interests": "interessi",
-  "app-menu-nature-location-quiz": "quiz sulla posizione della natura",
   "app-menu-command-editor": "editore dei comandi",
   "app-menu-presentation": "presentazione",
   "app-menu-editor": "editore",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "vai al riquadro precedente",
   "app-menu-new-search": "nuova ricerca",
   "app-menu-structured-search": "ricerca strutturata",
-  "app-menu-geospatial-search": "ricerca geografica",
+  "app-menu-geospatial-search": "ricerca geospaziale",
   "app-section-main": "principale",
   "app-section-info": "informazioni",
   "app-section-library": "biblioteca",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralogia",
   "app-section-science-archeology": "archeologia",
   "app-section-science-mathematics": "matematica",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomia",
+  "app-section-science-physics": "fisica",
+  "app-section-science-computing": "informatica",
   "app-section-media-datasets": "set di dati",
   "app-section-media-datasets-general": "generale",
   "app-section-media-datasets-topical": "attualità",
