--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -14,26 +14,38 @@
   "app-title-sub": "サブ",
   "app-title-pages": "ページ",
   "app-title-citations": "引用",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "APIキー",
+  "app-menu-search-in": "で検索",
+  "app-menu-search-in-option-reference": "参考作品",
+  "app-menu-search-in-option-culture": "文化",
+  "app-menu-search-in-option-science": "科学",
+  "app-menu-search-in-option-business": "仕事",
+  "app-menu-filter-by": "フィルタリング",
+  "app-menu-filter-by-option-text": "文章",
+  "app-menu-filter-by-option-image": "画像",
+  "app-menu-filter-by-option-video": "ビデオ",
+  "app-menu-filter-by-option-audio": "オーディオ",
+  "app-menu-filter-by-option-data": "データ",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "ソフトウェア",
+  "app-menu-filter-by-option-archive": "アーカイブ",
+  "app-menu-filter-by-option-entity": "実在物",
+  "app-menu-filter-by-year-range": "年の範囲",
+  "app-menu-nature-location-quiz": "自然の場所クイズ",
+  "app-menu-sort-by": "並べ替え",
+  "app-menu-sort-by-option-relevance-desc": "関連性↓",
+  "app-menu-sort-by-option-relevance-asc": "関連性 ↑",
+  "app-menu-sort-by-option-date-desc": "日付↓",
+  "app-menu-sort-by-option-date-asc": "日付 ↑",
+  "app-menu-sort-by-option-update-desc": "更新↓",
+  "app-menu-sort-by-option-update-asc": "更新 ↑",
+  "app-menu-sort-by-option-random": "ランダム",
+  "app-menu-sort-by-option-citations-desc": "引用↓",
+  "app-menu-sort-by-option-citations-asc": "引用 ↑",
+  "app-menu-sort-by-option-title-asc": "タイトル↑",
+  "app-menu-sort-by-option-title-desc": "タイトル↓",
+  "app-menu-sort-by-option-distance-asc": "距離↑",
+  "app-menu-sort-by-option-distance-desc": "距離↓",
   "app-menu-actions": "行動",
   "app-menu-background-audio": "オーディオ",
   "app-menu-background-midi": "ミディ",
@@ -43,6 +55,8 @@
   "app-menu-theme": "テーマ",
   "app-menu-interface-language": "インターフェース言語",
   "app-menu-voice": "声",
+  "app-menu-show-inline-help": "インラインヘルプを表示する",
+  "app-menu-inline-help": "インラインヘルプ",
   "app-menu-user-manual": "ユーザーマニュアル",
   "app-menu-keyboard-shortcuts": "キーボードショートカット",
   "app-menu-credits": "クレジット",
@@ -53,17 +67,18 @@
   "app-menu-toggle-fullscreen": "フルスクリーン切り替え",
   "app-menu-bookmark-actions": "ブックマーク選択アクション",
   "app-menu-bookmark-actions-reasoning": "推論",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "メディア",
+  "app-menu-bookmark-current-view": "現在のビューをブックマークする",
+  "app-menu-add-bookmark": "ブックマークを追加する",
+  "app-menu-add-bookmark-title": "タイトル",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "画像",
+  "app-menu-add-bookmark-clear-files": "クリアファイル",
+  "app-menu-add-bookmark-submit": "ブックマークを追加する",
   "app-menu-import-as": "ブックマークをインポートする",
   "app-menu-export-as": "ブックマークをエクスポートする",
-  "app-menu-bookmark-actions-media": "メディア",
   "app-menu-upload-json": "アップロード",
-  "app-menu-bookmark-current-view": "現在のビューをブックマークする",
-  "app-menu-visual-search": "視覚的な検索",
+  "app-menu-visual-search": "ビジュアル検索",
   "app-menu-reading-assistance": "読書補助",
   "app-menu-bread": "単語の先頭を太字にする",
   "app-menu-ai-tutor": "AI家庭教師",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "ピッチ",
   "app-menu-fullscreen-active-pane": "アクティブなペインを全画面表示します",
   "app-menu-toggle-sidebar": "サイドバーを切り替えます",
-  "app-menu-add-bookmark": "ブックマークを追加する",
   "app-menu-note-1": "注 1: フォーカスがサイドバーまたは Wikipedia 記事ペインにある場合にのみ使用できます。",
   "app-menu-features": "特徴",
   "app-menu-persona": "ペルソナ",
   "app-menu-country-select": "国",
   "app-menu-interests": "興味のあること",
-  "app-menu-nature-location-quiz": "自然の場所クイズ",
   "app-menu-command-editor": "コマンドエディタ",
   "app-menu-presentation": "プレゼンテーション",
   "app-menu-editor": "編集者",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "前のペインに移動",
   "app-menu-new-search": "新しい検索",
   "app-menu-structured-search": "構造化された検索",
-  "app-menu-geospatial-search": "地理検索",
+  "app-menu-geospatial-search": "地理空間検索",
   "app-section-main": "主要",
   "app-section-info": "情報",
   "app-section-library": "図書館",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "鉱物学",
   "app-section-science-archeology": "考古学",
   "app-section-science-mathematics": "数学",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "天文学",
+  "app-section-science-physics": "物理",
+  "app-section-science-computing": "コンピューティング",
   "app-section-media-datasets": "データセット",
   "app-section-media-datasets-general": "一般的な",
   "app-section-media-datasets-topical": "話題の",
