--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -14,26 +14,38 @@
   "app-title-sub": "보결",
   "app-title-pages": "페이지",
   "app-title-citations": "인용",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API 키",
+  "app-menu-search-in": "검색하다",
+  "app-menu-search-in-option-reference": "참고 작품",
+  "app-menu-search-in-option-culture": "문화",
+  "app-menu-search-in-option-science": "과학",
+  "app-menu-search-in-option-business": "사업",
+  "app-menu-filter-by": "필터링 기준",
+  "app-menu-filter-by-option-text": "텍스트",
+  "app-menu-filter-by-option-image": "영상",
+  "app-menu-filter-by-option-video": "동영상",
+  "app-menu-filter-by-option-audio": "오디오",
+  "app-menu-filter-by-option-data": "데이터",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "소프트웨어",
+  "app-menu-filter-by-option-archive": "보관소",
+  "app-menu-filter-by-option-entity": "실재",
+  "app-menu-filter-by-year-range": "연도 범위",
+  "app-menu-nature-location-quiz": "자연 위치 퀴즈",
+  "app-menu-sort-by": "정렬 기준",
+  "app-menu-sort-by-option-relevance-desc": "관련성 ↓",
+  "app-menu-sort-by-option-relevance-asc": "관련성 ↑",
+  "app-menu-sort-by-option-date-desc": "날짜 ↓",
+  "app-menu-sort-by-option-date-asc": "날짜 ↑",
+  "app-menu-sort-by-option-update-desc": "업데이트 ↓",
+  "app-menu-sort-by-option-update-asc": "업데이트 ↑",
+  "app-menu-sort-by-option-random": "무작위의",
+  "app-menu-sort-by-option-citations-desc": "인용 ↓",
+  "app-menu-sort-by-option-citations-asc": "인용 ↑",
+  "app-menu-sort-by-option-title-asc": "제목 ↑",
+  "app-menu-sort-by-option-title-desc": "제목 ↓",
+  "app-menu-sort-by-option-distance-asc": "거리 ↑",
+  "app-menu-sort-by-option-distance-desc": "거리 ↓",
   "app-menu-actions": "행위",
   "app-menu-background-audio": "오디오",
   "app-menu-background-midi": "미디",
@@ -43,6 +55,8 @@
   "app-menu-theme": "주제",
   "app-menu-interface-language": "인터페이스 언어",
   "app-menu-voice": "목소리",
+  "app-menu-show-inline-help": "인라인 도움말 표시",
+  "app-menu-inline-help": "인라인 도움말",
   "app-menu-user-manual": "사용자 매뉴얼",
   "app-menu-keyboard-shortcuts": "키보드 단축키",
   "app-menu-credits": "크레딧",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "전체 화면 전환",
   "app-menu-bookmark-actions": "북마크 선택 작업",
   "app-menu-bookmark-actions-reasoning": "추리",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "미디어",
+  "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
+  "app-menu-add-bookmark": "북마크에 추가하다",
+  "app-menu-add-bookmark-title": "제목",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "이미지",
+  "app-menu-add-bookmark-clear-files": "파일 지우기",
+  "app-menu-add-bookmark-submit": "북마크에 추가하다",
   "app-menu-import-as": "북마크 가져오기",
   "app-menu-export-as": "북마크 내보내기",
-  "app-menu-bookmark-actions-media": "미디어",
   "app-menu-upload-json": "업로드",
-  "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
   "app-menu-visual-search": "시각적 검색",
   "app-menu-reading-assistance": "독서 보조",
   "app-menu-bread": "단어 시작 볼드체",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "정점",
   "app-menu-fullscreen-active-pane": "활성 창을 전체 화면으로 표시",
   "app-menu-toggle-sidebar": "사이드바 전환",
-  "app-menu-add-bookmark": "북마크에 추가하다",
   "app-menu-note-1": "참고 1: 포커스가 사이드바 또는 Wikipedia 문서 창에 있는 경우에만 사용할 수 있습니다.",
   "app-menu-features": "특징",
   "app-menu-persona": "페르소나",
   "app-menu-country-select": "국가",
   "app-menu-interests": "이해",
-  "app-menu-nature-location-quiz": "자연 위치 퀴즈",
   "app-menu-command-editor": "명령 편집기",
   "app-menu-presentation": "프레젠테이션",
   "app-menu-editor": "편집자",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "이전 창으로 이동",
   "app-menu-new-search": "새로운 검색",
   "app-menu-structured-search": "구조화된 검색",
-  "app-menu-geospatial-search": "지리적 검색",
+  "app-menu-geospatial-search": "지리공간 검색",
   "app-section-main": "기본",
   "app-section-info": "정보",
   "app-section-library": "도서관",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "광물학",
   "app-section-science-archeology": "고고학",
   "app-section-science-mathematics": "수학",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "천문학",
+  "app-section-science-physics": "물리학",
+  "app-section-science-computing": "컴퓨팅",
   "app-section-media-datasets": "데이터 세트",
   "app-section-media-datasets-general": "일반적인",
   "app-section-media-datasets-topical": "뉴스 영화",
@@ -178,7 +191,7 @@
   "app-section-society-events": "이벤트",
   "app-section-society-shopping": "쇼핑",
   "app-guide-bookmarks-selected": "선택된",
-  "app-guide-bookmarks-deselect-all": "모두 선택 취소",
+  "app-guide-bookmarks-deselect-all": "모두 선택 해제",
   "app-guide-bookmark-teach-topics": "가르쳐 줘",
   "app-guide-bookmark-quiz-topics": "나에게 퀴즈를 줘",
   "app-guide-bookmark-related-topics": "관련 주제",
