--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -14,26 +14,38 @@
   "app-title-sub": "उप",
   "app-title-pages": "पृष्ठे",
   "app-title-citations": "उद्धरण",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API की",
+  "app-menu-search-in": "मध्ये शोधा",
+  "app-menu-search-in-option-reference": "संदर्भ कार्य",
+  "app-menu-search-in-option-culture": "संस्कृती",
+  "app-menu-search-in-option-science": "विज्ञान",
+  "app-menu-search-in-option-business": "व्यवसाय",
+  "app-menu-filter-by": "द्वारे फिल्टर करा",
+  "app-menu-filter-by-option-text": "मजकूर",
+  "app-menu-filter-by-option-image": "प्रतिमा",
+  "app-menu-filter-by-option-video": "व्हिडिओ",
+  "app-menu-filter-by-option-audio": "ऑडिओ",
+  "app-menu-filter-by-option-data": "डेटा",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "सॉफ्टवेअर",
+  "app-menu-filter-by-option-archive": "संग्रहण",
+  "app-menu-filter-by-option-entity": "अस्तित्व",
+  "app-menu-filter-by-year-range": "वर्ष श्रेणी",
+  "app-menu-nature-location-quiz": "निसर्ग स्थान क्विझ",
+  "app-menu-sort-by": "क्रमवारी लावा",
+  "app-menu-sort-by-option-relevance-desc": "प्रासंगिकता ↓",
+  "app-menu-sort-by-option-relevance-asc": "प्रासंगिकता ↑",
+  "app-menu-sort-by-option-date-desc": "तारीख ↓",
+  "app-menu-sort-by-option-date-asc": "तारीख ↑",
+  "app-menu-sort-by-option-update-desc": "अद्यतन ↓",
+  "app-menu-sort-by-option-update-asc": "अद्यतनित करा ↑",
+  "app-menu-sort-by-option-random": "यादृच्छिक",
+  "app-menu-sort-by-option-citations-desc": "उद्धरण ↓",
+  "app-menu-sort-by-option-citations-asc": "उद्धरण ↑",
+  "app-menu-sort-by-option-title-asc": "शीर्षक ↑",
+  "app-menu-sort-by-option-title-desc": "शीर्षक ↓",
+  "app-menu-sort-by-option-distance-asc": "अंतर ↑",
+  "app-menu-sort-by-option-distance-desc": "अंतर ↓",
   "app-menu-actions": "क्रिया",
   "app-menu-background-audio": "ऑडिओ",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "थीम",
   "app-menu-interface-language": "इंटरफेस भाषा",
   "app-menu-voice": "आवाज",
+  "app-menu-show-inline-help": "इनलाइन मदत दाखवा",
+  "app-menu-inline-help": "इनलाइन मदत",
   "app-menu-user-manual": "उपयोगकर्ता पुस्तिका",
   "app-menu-keyboard-shortcuts": "कीबोर्ड शॉर्टकट",
   "app-menu-credits": "क्रेडिट्स",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "फुलस्क्रीन टॉगल करा",
   "app-menu-bookmark-actions": "बुकमार्क-निवड क्रिया",
   "app-menu-bookmark-actions-reasoning": "तर्क",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "मीडिया",
+  "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
+  "app-menu-add-bookmark": "बुकमार्क जोडा",
+  "app-menu-add-bookmark-title": "शीर्षक",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "प्रतिमा",
+  "app-menu-add-bookmark-clear-files": "फाइल्स साफ करा",
+  "app-menu-add-bookmark-submit": "बुकमार्क जोडा",
   "app-menu-import-as": "बुकमार्क आयात करा",
   "app-menu-export-as": "बुकमार्क निर्यात करा",
-  "app-menu-bookmark-actions-media": "मीडिया",
   "app-menu-upload-json": "अपलोड करा",
-  "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
   "app-menu-visual-search": "व्हिज्युअल शोध",
   "app-menu-reading-assistance": "वाचन सहाय्य",
   "app-menu-bread": "शब्द-प्रारंभ ठळक",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "खेळपट्टी",
   "app-menu-fullscreen-active-pane": "सक्रिय उपखंड पूर्णस्क्रीन",
   "app-menu-toggle-sidebar": "साइडबार टॉगल करा",
-  "app-menu-add-bookmark": "बुकमार्क जोडा",
   "app-menu-note-1": "टीप 1: जेव्हा फोकस साइडबारवर किंवा विकिपीडिया लेख उपखंडावर असेल तेव्हाच उपलब्ध.",
   "app-menu-features": "वैशिष्ट्ये",
   "app-menu-persona": "व्यक्तिमत्व",
   "app-menu-country-select": "देश",
   "app-menu-interests": "स्वारस्ये",
-  "app-menu-nature-location-quiz": "निसर्ग स्थान क्विझ",
   "app-menu-command-editor": "कमांड एडिटर",
   "app-menu-presentation": "सादरीकरण",
   "app-menu-editor": "संपादक",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "खनिजशास्त्र",
   "app-section-science-archeology": "पुरातत्व",
   "app-section-science-mathematics": "गणित",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "खगोलशास्त्र",
+  "app-section-science-physics": "भौतिकशास्त्र",
+  "app-section-science-computing": "संगणन",
   "app-section-media-datasets": "डेटासेट",
   "app-section-media-datasets-general": "सामान्य",
   "app-section-media-datasets-topical": "स्थानिक",
@@ -196,7 +209,7 @@
   "app-guide-organism": "जीव",
   "app-guide-music": "संगीत",
   "app-guide-science": "विज्ञान",
-  "app-guide-welcome-text": "कॉन्झेप्ट हा एकविसाव्या शतकासाठी विश्वकोश तयार करण्याचा प्रयत्न आहे.  <br><br> तुमच्या शोधांचा आनंद घ्या! ",
+  "app-guide-welcome-text": "कॉन्झेप्ट हा एकविसाव्या शतकासाठी ज्ञानकोश तयार करण्याचा प्रयत्न आहे.  <br><br> तुमच्या शोधांचा आनंद घ्या! ",
   "app-guide-documentary": "माहितीपट",
   "app-guide-country": "देश",
   "app-guide-string-search": "स्ट्रिंग शोध",
