--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -14,24 +14,36 @@
   "app-title-sub": "sub",
   "app-title-pages": "Pagina's",
   "app-title-citations": "Citaties",
-  "app-menu-sort-by": "sorteer op",
+  "app-menu-api-keys": "API-sleutels",
   "app-menu-search-in": "zoek in",
   "app-menu-search-in-option-reference": "naslagwerken",
-  "app-menu-api-keys": "API sleutels",
-  "app-menu-sort-by-option-relevance-desc": "relevantie ↓",
   "app-menu-search-in-option-culture": "cultuur",
   "app-menu-search-in-option-science": "wetenschap",
-  "app-menu-search-in-option-business": "zakelijk",
+  "app-menu-search-in-option-business": "bedrijf",
+  "app-menu-filter-by": "filteren op",
+  "app-menu-filter-by-option-text": "tekst",
+  "app-menu-filter-by-option-image": "afbeelding",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "geluid",
+  "app-menu-filter-by-option-data": "gegevens",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "software",
+  "app-menu-filter-by-option-archive": "archief",
+  "app-menu-filter-by-option-entity": "entiteit",
+  "app-menu-filter-by-year-range": "jaar bereik",
+  "app-menu-nature-location-quiz": "quiz over natuurlocaties",
+  "app-menu-sort-by": "sorteer op",
+  "app-menu-sort-by-option-relevance-desc": "relevantie ↓",
   "app-menu-sort-by-option-relevance-asc": "relevantie ↑",
   "app-menu-sort-by-option-date-desc": "datum ↓",
   "app-menu-sort-by-option-date-asc": "datum ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
+  "app-menu-sort-by-option-update-desc": "bijwerken ↓",
+  "app-menu-sort-by-option-update-asc": "bijwerken ↑",
   "app-menu-sort-by-option-random": "willekeurig",
   "app-menu-sort-by-option-citations-desc": "citaten ↓",
   "app-menu-sort-by-option-citations-asc": "citaten ↑",
-  "app-menu-sort-by-option-title-desc": "titel ↓",
   "app-menu-sort-by-option-title-asc": "titel ↑",
+  "app-menu-sort-by-option-title-desc": "titel ↓",
   "app-menu-sort-by-option-distance-asc": "afstand ↑",
   "app-menu-sort-by-option-distance-desc": "afstand ↓",
   "app-menu-actions": "acties",
@@ -43,29 +55,32 @@
   "app-menu-theme": "thema",
   "app-menu-interface-language": "interfacetaal",
   "app-menu-voice": "stem",
+  "app-menu-show-inline-help": "inline-hulp weergeven",
+  "app-menu-inline-help": "inline hulp",
   "app-menu-user-manual": "handleiding",
-  "app-menu-keyboard-shortcuts": "toetsenbord sneltoetsen",
+  "app-menu-keyboard-shortcuts": "Toetsenbord sneltoetsen",
   "app-menu-credits": "tegoeden",
   "app-menu-about": "over",
   "app-menu-random-topic": "willekeurig onderwerp",
   "app-menu-random-topic-key": "willekeurig onderwerp",
   "app-menu-compare-topics": "vergelijk onderwerpen",
   "app-menu-toggle-fullscreen": "volledig scherm activeren",
-  "app-menu-bookmark-actions": "bladwijzer selectie acties",
+  "app-menu-bookmark-actions": "bladwijzerselectieacties",
   "app-menu-bookmark-actions-reasoning": "redenering",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-bookmark-current-view": "bladwijzer voor de huidige weergave",
+  "app-menu-add-bookmark": "Voeg bladwijzer toe",
   "app-menu-add-bookmark-title": "titel",
   "app-menu-add-bookmark-url": "URL",
   "app-menu-add-bookmark-images": "afbeeldingen",
   "app-menu-add-bookmark-clear-files": "bestanden wissen",
-  "app-menu-add-bookmark-submit": "bladwijzer toevoegen",
+  "app-menu-add-bookmark-submit": "Voeg bladwijzer toe",
   "app-menu-import-as": "bladwijzers importeren",
   "app-menu-export-as": "bladwijzers exporteren",
-  "app-menu-bookmark-actions-media": "media",
   "app-menu-upload-json": "uploaden",
-  "app-menu-bookmark-current-view": "bladwijzer voor de huidige weergave",
   "app-menu-visual-search": "visueel zoeken",
   "app-menu-reading-assistance": "hulp bij het lezen",
-  "app-menu-bread": "vetgedrukt woordbegin",
+  "app-menu-bread": "vetgedrukte woordbegin",
   "app-menu-ai-tutor": "AI-docent",
   "app-menu-datasources": "data bronnen",
   "app-menu-clone-tab": "tabblad kloon",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "toonhoogte",
   "app-menu-fullscreen-active-pane": "het actieve venster op volledig scherm weergeven",
   "app-menu-toggle-sidebar": "schakel de zijbalk in",
-  "app-menu-add-bookmark": "bladwijzer toevoegen",
   "app-menu-note-1": "opmerking 1: alleen beschikbaar als de focus op de zijbalk of een Wikipedia-artikelvenster ligt.",
   "app-menu-features": "functies",
   "app-menu-persona": "persona",
   "app-menu-country-select": "land",
   "app-menu-interests": "belangen",
-  "app-menu-nature-location-quiz": "quiz over natuurlocaties",
   "app-menu-command-editor": "commando-editor",
   "app-menu-presentation": "presentatie",
   "app-menu-editor": "editor",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "ga naar het vorige venster",
   "app-menu-new-search": "nieuwe zoekopdracht",
   "app-menu-structured-search": "gestructureerd zoeken",
-  "app-menu-geospatial-search": "geografisch zoeken",
+  "app-menu-geospatial-search": "georuimtelijke zoektocht",
   "app-section-main": "voornaamst",
   "app-section-info": "informatie",
   "app-section-library": "bibliotheek",
@@ -139,7 +152,7 @@
   "app-section-education-quizzes": "quizzen",
   "app-section-science": "wetenschap",
   "app-section-science-search-tools": "zoekhulpmiddelen",
-  "app-section-science-open-journals": "open tijdschriften",
+  "app-section-science-open-journals": "geopende tijdschriften",
   "app-section-science-closed-journals": "gesloten tijdschriften",
   "app-section-science-news": "nieuws",
   "app-section-science-language": "taal",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralogie",
   "app-section-science-archeology": "archeologie",
   "app-section-science-mathematics": "wiskunde",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomie",
+  "app-section-science-physics": "natuurkunde",
+  "app-section-science-computing": "computergebruik",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "algemeen",
   "app-section-media-datasets-topical": "actueel",
@@ -226,7 +239,7 @@
   "app-guide-protein": "eiwit",
   "app-guide-atom": "atoom",
   "app-guide-protist": "protist",
-  "app-guide-country-map": "land kaart",
+  "app-guide-country-map": "landkaart",
   "app-guide-capital": "hoofdstad",
   "app-guide-form-of-government": "vorm van overheid",
   "app-guide-religion": "religie",
