--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -14,26 +14,38 @@
   "app-title-sub": "under",
   "app-title-pages": "sider",
   "app-title-citations": "Sitater",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API-nøkler",
+  "app-menu-search-in": "søk inn",
+  "app-menu-search-in-option-reference": "oppslagsverk",
+  "app-menu-search-in-option-culture": "kultur",
+  "app-menu-search-in-option-science": "vitenskap",
+  "app-menu-search-in-option-business": "virksomhet",
+  "app-menu-filter-by": "filtrer etter",
+  "app-menu-filter-by-option-text": "tekst",
+  "app-menu-filter-by-option-image": "bilde",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "lyd",
+  "app-menu-filter-by-option-data": "data",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "programvare",
+  "app-menu-filter-by-option-archive": "arkiv",
+  "app-menu-filter-by-option-entity": "enhet",
+  "app-menu-filter-by-year-range": "årsområde",
+  "app-menu-nature-location-quiz": "naturplasseringsquiz",
+  "app-menu-sort-by": "Sorter etter",
+  "app-menu-sort-by-option-relevance-desc": "relevans ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevans ↑",
+  "app-menu-sort-by-option-date-desc": "dato ↓",
+  "app-menu-sort-by-option-date-asc": "dato ↑",
+  "app-menu-sort-by-option-update-desc": "oppdater ↓",
+  "app-menu-sort-by-option-update-asc": "oppdatering ↑",
+  "app-menu-sort-by-option-random": "tilfeldig",
+  "app-menu-sort-by-option-citations-desc": "sitater ↓",
+  "app-menu-sort-by-option-citations-asc": "sitater ↑",
+  "app-menu-sort-by-option-title-asc": "tittel ↑",
+  "app-menu-sort-by-option-title-desc": "tittel ↓",
+  "app-menu-sort-by-option-distance-asc": "avstand ↑",
+  "app-menu-sort-by-option-distance-desc": "avstand ↓",
   "app-menu-actions": "handlinger",
   "app-menu-background-audio": "lyd",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "grensesnittspråk",
   "app-menu-voice": "stemme",
+  "app-menu-show-inline-help": "vis integrert hjelp",
+  "app-menu-inline-help": "innebygd hjelp",
   "app-menu-user-manual": "brukermanual",
   "app-menu-keyboard-shortcuts": "tastatursnarveier",
   "app-menu-credits": "studiepoeng",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "veksle mellom fullskjerm",
   "app-menu-bookmark-actions": "handlinger for bokmerkevalg",
   "app-menu-bookmark-actions-reasoning": "argumentasjon",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
+  "app-menu-add-bookmark": "Legg til bokmerke",
+  "app-menu-add-bookmark-title": "tittel",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "Bilder",
+  "app-menu-add-bookmark-clear-files": "slette filer",
+  "app-menu-add-bookmark-submit": "Legg til bokmerke",
   "app-menu-import-as": "importere bokmerker",
   "app-menu-export-as": "eksportere bokmerker",
-  "app-menu-bookmark-actions-media": "media",
   "app-menu-upload-json": "laste opp",
-  "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
   "app-menu-visual-search": "visuelt søk",
   "app-menu-reading-assistance": "lesehjelp",
   "app-menu-bread": "ord-start fet skrift",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "tonehøyde",
   "app-menu-fullscreen-active-pane": "fullskjerm den aktive ruten",
   "app-menu-toggle-sidebar": "slå på sidefeltet",
-  "app-menu-add-bookmark": "Legg til bokmerke",
   "app-menu-note-1": "merknad 1: bare tilgjengelig når fokus er på sidefeltet eller en Wikipedia-artikkelrute.",
   "app-menu-features": "egenskaper",
   "app-menu-persona": "persona",
   "app-menu-country-select": "land",
   "app-menu-interests": "interesser",
-  "app-menu-nature-location-quiz": "naturplasseringsquiz",
   "app-menu-command-editor": "kommando editor",
   "app-menu-presentation": "presentasjon",
   "app-menu-editor": "redaktør",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "gå til forrige rute",
   "app-menu-new-search": "nytt søk",
   "app-menu-structured-search": "strukturert søk",
-  "app-menu-geospatial-search": "geografisk søk",
+  "app-menu-geospatial-search": "geospatialt søk",
   "app-section-main": "hoved-",
   "app-section-info": "info",
   "app-section-library": "bibliotek",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "minerologi",
   "app-section-science-archeology": "arkeologi",
   "app-section-science-mathematics": "matematikk",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
+  "app-section-science-physics": "fysikk",
+  "app-section-science-computing": "databehandling",
   "app-section-media-datasets": "datasett",
   "app-section-media-datasets-general": "generell",
   "app-section-media-datasets-topical": "aktuelt",
