--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "Páginas",
   "app-title-citations": "Citações",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Chaves de API",
+  "app-menu-search-in": "procure em",
+  "app-menu-search-in-option-reference": "obras de referência",
+  "app-menu-search-in-option-culture": "cultura",
+  "app-menu-search-in-option-science": "Ciência",
+  "app-menu-search-in-option-business": "negócios",
+  "app-menu-filter-by": "filtrar por",
+  "app-menu-filter-by-option-text": "texto",
+  "app-menu-filter-by-option-image": "imagem",
+  "app-menu-filter-by-option-video": "vídeo",
+  "app-menu-filter-by-option-audio": "áudio",
+  "app-menu-filter-by-option-data": "dados",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "Programas",
+  "app-menu-filter-by-option-archive": "arquivo",
+  "app-menu-filter-by-option-entity": "entidade",
+  "app-menu-filter-by-year-range": "intervalo de anos",
+  "app-menu-nature-location-quiz": "teste de localização da natureza",
+  "app-menu-sort-by": "ordenar por",
+  "app-menu-sort-by-option-relevance-desc": "relevância ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevância ↑",
+  "app-menu-sort-by-option-date-desc": "data ↓",
+  "app-menu-sort-by-option-date-asc": "data ↑",
+  "app-menu-sort-by-option-update-desc": "atualizar ↓",
+  "app-menu-sort-by-option-update-asc": "atualizar ↑",
+  "app-menu-sort-by-option-random": "aleatório",
+  "app-menu-sort-by-option-citations-desc": "citações ↓",
+  "app-menu-sort-by-option-citations-asc": "citações ↑",
+  "app-menu-sort-by-option-title-asc": "título ↑",
+  "app-menu-sort-by-option-title-desc": "título ↓",
+  "app-menu-sort-by-option-distance-asc": "distância ↑",
+  "app-menu-sort-by-option-distance-desc": "distância ↓",
   "app-menu-actions": "ações",
   "app-menu-background-audio": "áudio",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "Interface de linguagem",
   "app-menu-voice": "voz",
+  "app-menu-show-inline-help": "mostrar ajuda embutida",
+  "app-menu-inline-help": "ajuda embutida",
   "app-menu-user-manual": "manual do usuário",
   "app-menu-keyboard-shortcuts": "atalhos do teclado",
   "app-menu-credits": "créditos",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "alternar para o modo tela cheia",
   "app-menu-bookmark-actions": "ações de seleção de favoritos",
   "app-menu-bookmark-actions-reasoning": "raciocínio",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "meios de comunicação",
+  "app-menu-bookmark-current-view": "marcar a visualização atual",
+  "app-menu-add-bookmark": "adicionar marcador",
+  "app-menu-add-bookmark-title": "título",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "imagens",
+  "app-menu-add-bookmark-clear-files": "limpar arquivos",
+  "app-menu-add-bookmark-submit": "adicionar marcador",
   "app-menu-import-as": "importar favoritos",
   "app-menu-export-as": "exportar favoritos",
-  "app-menu-bookmark-actions-media": "meios de comunicação",
   "app-menu-upload-json": "carregar",
-  "app-menu-bookmark-current-view": "marcar a visualização atual",
   "app-menu-visual-search": "pesquisa visual",
   "app-menu-reading-assistance": "assistência de leitura",
   "app-menu-bread": "negrito no início da palavra",
@@ -87,14 +102,12 @@
   "app-menu-pitch": "tom",
   "app-menu-fullscreen-active-pane": "tela cheia do painel ativo",
   "app-menu-toggle-sidebar": "alternar a barra lateral",
-  "app-menu-add-bookmark": "adicionar marcador",
   "app-menu-note-1": "nota 1: disponível apenas quando o foco está na barra lateral ou no painel de artigos da Wikipedia.",
   "app-menu-features": "características",
   "app-menu-persona": "pessoa",
   "app-menu-country-select": "país",
   "app-menu-interests": "interesses",
-  "app-menu-nature-location-quiz": "teste de localização da natureza",
-  "app-menu-command-editor": "editor de comandos",
+  "app-menu-command-editor": "editor de comando",
   "app-menu-presentation": "apresentação",
   "app-menu-editor": "editor",
   "app-menu-run-code": "correr",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "ir para o painel anterior",
   "app-menu-new-search": "nova pesquisa",
   "app-menu-structured-search": "pesquisa estruturada",
-  "app-menu-geospatial-search": "pesquisa geográfica",
+  "app-menu-geospatial-search": "pesquisa geoespacial",
   "app-section-main": "principal",
   "app-section-info": "informações",
   "app-section-library": "biblioteca",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineralologia",
   "app-section-science-archeology": "arqueologia",
   "app-section-science-mathematics": "matemática",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomia",
+  "app-section-science-physics": "física",
+  "app-section-science-computing": "Informática",
   "app-section-media-datasets": "conjuntos de dados",
   "app-section-media-datasets-general": "em geral",
   "app-section-media-datasets-topical": "tópico",
