--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -14,26 +14,38 @@
   "app-title-sub": "суб",
   "app-title-pages": "страницы",
   "app-title-citations": "Цитаты",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Ключи API",
+  "app-menu-search-in": "искать в",
+  "app-menu-search-in-option-reference": "справочные работы",
+  "app-menu-search-in-option-culture": "культура",
+  "app-menu-search-in-option-science": "наука",
+  "app-menu-search-in-option-business": "бизнес",
+  "app-menu-filter-by": "Сортировать по",
+  "app-menu-filter-by-option-text": "текст",
+  "app-menu-filter-by-option-image": "изображение",
+  "app-menu-filter-by-option-video": "видео",
+  "app-menu-filter-by-option-audio": "аудио",
+  "app-menu-filter-by-option-data": "данные",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "программное обеспечение",
+  "app-menu-filter-by-option-archive": "архив",
+  "app-menu-filter-by-option-entity": "сущность",
+  "app-menu-filter-by-year-range": "Годовой диапазон",
+  "app-menu-nature-location-quiz": "викторина о местонахождении природы",
+  "app-menu-sort-by": "Сортировать по",
+  "app-menu-sort-by-option-relevance-desc": "актуальность ↓",
+  "app-menu-sort-by-option-relevance-asc": "актуальность ↑",
+  "app-menu-sort-by-option-date-desc": "дата ↓",
+  "app-menu-sort-by-option-date-asc": "дата ↑",
+  "app-menu-sort-by-option-update-desc": "обновить ↓",
+  "app-menu-sort-by-option-update-asc": "обновление ↑",
+  "app-menu-sort-by-option-random": "случайный",
+  "app-menu-sort-by-option-citations-desc": "цитаты ↓",
+  "app-menu-sort-by-option-citations-asc": "цитаты ↑",
+  "app-menu-sort-by-option-title-asc": "название ↑",
+  "app-menu-sort-by-option-title-desc": "титул ↓",
+  "app-menu-sort-by-option-distance-asc": "расстояние ↑",
+  "app-menu-sort-by-option-distance-desc": "расстояние ↓",
   "app-menu-actions": "действия",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
@@ -43,6 +55,8 @@
   "app-menu-theme": "тема",
   "app-menu-interface-language": "язык интерфейса",
   "app-menu-voice": "голос",
+  "app-menu-show-inline-help": "показать встроенную справку",
+  "app-menu-inline-help": "встроенная справка",
   "app-menu-user-manual": "руководство пользователя",
   "app-menu-keyboard-shortcuts": "горячие клавиши",
   "app-menu-credits": "кредиты",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "Включить полноэкранный режим",
   "app-menu-bookmark-actions": "действия по выбору закладок",
   "app-menu-bookmark-actions-reasoning": "рассуждение",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "СМИ",
+  "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
+  "app-menu-add-bookmark": "добавить закладку",
+  "app-menu-add-bookmark-title": "заголовок",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "изображений",
+  "app-menu-add-bookmark-clear-files": "очистить файлы",
+  "app-menu-add-bookmark-submit": "добавить закладку",
   "app-menu-import-as": "импортировать закладки",
   "app-menu-export-as": "экспортировать закладки",
-  "app-menu-bookmark-actions-media": "СМИ",
   "app-menu-upload-json": "загрузить",
-  "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
   "app-menu-visual-search": "визуальный поиск",
   "app-menu-reading-assistance": "помощь в чтении",
   "app-menu-bread": "начало слова жирным шрифтом",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "подача",
   "app-menu-fullscreen-active-pane": "полноэкранный режим активной панели",
   "app-menu-toggle-sidebar": "переключить боковую панель",
-  "app-menu-add-bookmark": "добавить закладку",
   "app-menu-note-1": "примечание 1: доступно только в том случае, если фокус находится на боковой панели или на панели статей Википедии.",
   "app-menu-features": "функции",
   "app-menu-persona": "личность",
   "app-menu-country-select": "страна",
   "app-menu-interests": "интересы",
-  "app-menu-nature-location-quiz": "викторина о местонахождении природы",
   "app-menu-command-editor": "редактор команд",
   "app-menu-presentation": "презентация",
   "app-menu-editor": "редактор",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "перейти на предыдущую панель",
   "app-menu-new-search": "новый поиск",
   "app-menu-structured-search": "структурированный поиск",
-  "app-menu-geospatial-search": "географический поиск",
+  "app-menu-geospatial-search": "геопространственный поиск",
   "app-section-main": "основной",
   "app-section-info": "Информация",
   "app-section-library": "библиотека",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "минералология",
   "app-section-science-archeology": "археология",
   "app-section-science-mathematics": "математика",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "астрономия",
+  "app-section-science-physics": "физика",
+  "app-section-science-computing": "вычисления",
   "app-section-media-datasets": "наборы данных",
   "app-section-media-datasets-general": "общий",
   "app-section-media-datasets-topical": "актуальный",
