--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -6,7 +6,7 @@
   "app-tab-settings-title": "подешавања",
   "app-tab-help-title": "помоћ",
   "app-tab-audio-chat-title": "аудио ћаскање",
-  "app-notification-too-few-compare-topics": "Прво додајте две или више тема у поређење, користећи дугме (налази се на врху чланка на Википедији и у мета-одељку теме)",
+  "app-notification-too-few-compare-topics": "Прво додајте две или више тема у поређење, користећи дугме (које се налази на врху Википедијиног чланка и у мета-одељку теме)",
   "app-search-placeholder": "Претрага",
   "app-topics-found": "пронађене теме",
   "app-title-occurence": "Мапа појављивања",
@@ -14,26 +14,38 @@
   "app-title-sub": "суб",
   "app-title-pages": "странице",
   "app-title-citations": "Цитати",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "АПИ кључеви",
+  "app-menu-search-in": "Претрага у",
+  "app-menu-search-in-option-reference": "референтни радови",
+  "app-menu-search-in-option-culture": "културе",
+  "app-menu-search-in-option-science": "Наука",
+  "app-menu-search-in-option-business": "посао",
+  "app-menu-filter-by": "филтер од",
+  "app-menu-filter-by-option-text": "текст",
+  "app-menu-filter-by-option-image": "слика",
+  "app-menu-filter-by-option-video": "видео",
+  "app-menu-filter-by-option-audio": "аудио",
+  "app-menu-filter-by-option-data": "података",
+  "app-menu-filter-by-option-3D": "3Д",
+  "app-menu-filter-by-option-software": "софтвер",
+  "app-menu-filter-by-option-archive": "архива",
+  "app-menu-filter-by-option-entity": "ентитета",
+  "app-menu-filter-by-year-range": "распон година",
+  "app-menu-nature-location-quiz": "квиз о локацији у природи",
+  "app-menu-sort-by": "Сортирај по",
+  "app-menu-sort-by-option-relevance-desc": "релевантност ↓",
+  "app-menu-sort-by-option-relevance-asc": "релевантност ↑",
+  "app-menu-sort-by-option-date-desc": "датум ↓",
+  "app-menu-sort-by-option-date-asc": "датум ↑",
+  "app-menu-sort-by-option-update-desc": "ажурирање ↓",
+  "app-menu-sort-by-option-update-asc": "ажурирање ↑",
+  "app-menu-sort-by-option-random": "насумично",
+  "app-menu-sort-by-option-citations-desc": "цитати ↓",
+  "app-menu-sort-by-option-citations-asc": "цитати ↑",
+  "app-menu-sort-by-option-title-asc": "наслов ↑",
+  "app-menu-sort-by-option-title-desc": "наслов ↓",
+  "app-menu-sort-by-option-distance-asc": "удаљеност ↑",
+  "app-menu-sort-by-option-distance-desc": "растојање ↓",
   "app-menu-actions": "радње",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
@@ -43,6 +55,8 @@
   "app-menu-theme": "тема",
   "app-menu-interface-language": "језик интерфејса",
   "app-menu-voice": "глас",
+  "app-menu-show-inline-help": "прикажи помоћ на линији",
+  "app-menu-inline-help": "инлине помоћ",
   "app-menu-user-manual": "упутство за коришћење",
   "app-menu-keyboard-shortcuts": "пречице на тастатури",
   "app-menu-credits": "кредити",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "укључите цео екран",
   "app-menu-bookmark-actions": "радње избора обележивача",
   "app-menu-bookmark-actions-reasoning": "расуђивање",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "медија",
+  "app-menu-bookmark-current-view": "обележи тренутни приказ",
+  "app-menu-add-bookmark": "додај обележивач",
+  "app-menu-add-bookmark-title": "наслов",
+  "app-menu-add-bookmark-url": "урл",
+  "app-menu-add-bookmark-images": "слике",
+  "app-menu-add-bookmark-clear-files": "очистите датотеке",
+  "app-menu-add-bookmark-submit": "додај обележивач",
   "app-menu-import-as": "увоз обележивача",
   "app-menu-export-as": "извоз обележивача",
-  "app-menu-bookmark-actions-media": "медија",
   "app-menu-upload-json": "отпремити",
-  "app-menu-bookmark-current-view": "обележи тренутни приказ",
   "app-menu-visual-search": "визуелна претрага",
   "app-menu-reading-assistance": "помоћ при читању",
   "app-menu-bread": "подебљано на почетку речи",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "висина тона",
   "app-menu-fullscreen-active-pane": "преко целог екрана активно окно",
   "app-menu-toggle-sidebar": "пребаците бочну траку",
-  "app-menu-add-bookmark": "додај обележивач",
   "app-menu-note-1": "Напомена 1: доступно само када је фокус на бочној траци или окну чланака на Википедији.",
   "app-menu-features": "Карактеристике",
   "app-menu-persona": "персона",
-  "app-menu-country-select": "земља",
+  "app-menu-country-select": "земљи",
   "app-menu-interests": "интересовања",
-  "app-menu-nature-location-quiz": "квиз о локацији у природи",
   "app-menu-command-editor": "уредник команди",
   "app-menu-presentation": "презентација",
   "app-menu-editor": "уредник",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "идите на претходно окно",
   "app-menu-new-search": "Нова претрага",
   "app-menu-structured-search": "структурирано претраживање",
-  "app-menu-geospatial-search": "географско претраживање",
+  "app-menu-geospatial-search": "геопросторна претрага",
   "app-section-main": "главни",
   "app-section-info": "инфо",
   "app-section-library": "библиотека",
@@ -119,7 +132,7 @@
   "app-section-news-general": "Генерал",
   "app-section-social": "друштвеним",
   "app-section-news-tech": "тецх",
-  "app-section-society-jobs": "пословима",
+  "app-section-society-jobs": "послови",
   "app-section-location": "локација",
   "app-section-location-geography": "географија",
   "app-section-location-demography": "демографија",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "минералологија",
   "app-section-science-archeology": "археологија",
   "app-section-science-mathematics": "математика",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "астрономија",
+  "app-section-science-physics": "стање",
+  "app-section-science-computing": "рад на рачунару",
   "app-section-media-datasets": "скупови података",
   "app-section-media-datasets-general": "Генерал",
   "app-section-media-datasets-topical": "актуелно",
@@ -198,7 +211,7 @@
   "app-guide-science": "Наука",
   "app-guide-welcome-text": "Цонзепт је покушај стварања енциклопедије за 21. век.  <br><br> Уживајте у својим истраживањима! ",
   "app-guide-documentary": "документарни филм",
-  "app-guide-country": "земља",
+  "app-guide-country": "земљи",
   "app-guide-string-search": "стринг сеарцх",
   "app-guide-historical-country": "историјска земља",
   "app-guide-ethnic-group": "етничка група",
