--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -14,26 +14,38 @@
   "app-title-sub": "sub",
   "app-title-pages": "sidor",
   "app-title-citations": "Citat",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API-nycklar",
+  "app-menu-search-in": "Sök i",
+  "app-menu-search-in-option-reference": "uppslagsverk",
+  "app-menu-search-in-option-culture": "kultur",
+  "app-menu-search-in-option-science": "vetenskap",
+  "app-menu-search-in-option-business": "företag",
+  "app-menu-filter-by": "filtrera efter",
+  "app-menu-filter-by-option-text": "text",
+  "app-menu-filter-by-option-image": "bild",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "audio",
+  "app-menu-filter-by-option-data": "data",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "programvara",
+  "app-menu-filter-by-option-archive": "arkiv",
+  "app-menu-filter-by-option-entity": "entitet",
+  "app-menu-filter-by-year-range": "årsintervall",
+  "app-menu-nature-location-quiz": "naturplats frågesport",
+  "app-menu-sort-by": "sortera efter",
+  "app-menu-sort-by-option-relevance-desc": "relevans ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevans ↑",
+  "app-menu-sort-by-option-date-desc": "datum ↓",
+  "app-menu-sort-by-option-date-asc": "datum ↑",
+  "app-menu-sort-by-option-update-desc": "uppdatera ↓",
+  "app-menu-sort-by-option-update-asc": "uppdatera ↑",
+  "app-menu-sort-by-option-random": "slumpmässig",
+  "app-menu-sort-by-option-citations-desc": "citat ↓",
+  "app-menu-sort-by-option-citations-asc": "citat ↑",
+  "app-menu-sort-by-option-title-asc": "titel ↑",
+  "app-menu-sort-by-option-title-desc": "titel ↓",
+  "app-menu-sort-by-option-distance-asc": "avstånd ↑",
+  "app-menu-sort-by-option-distance-desc": "avstånd ↓",
   "app-menu-actions": "handlingar",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -43,9 +55,11 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "gränssnittsspråk",
   "app-menu-voice": "röst",
+  "app-menu-show-inline-help": "visa inline hjälp",
+  "app-menu-inline-help": "inline hjälp",
   "app-menu-user-manual": "användarmanual",
   "app-menu-keyboard-shortcuts": "tangentbordsgenvägar",
-  "app-menu-credits": "krediter",
+  "app-menu-credits": "poäng",
   "app-menu-about": "handla om",
   "app-menu-random-topic": "slumpmässigt ämne",
   "app-menu-random-topic-key": "slumpmässigt ämne",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "växla helskärm",
   "app-menu-bookmark-actions": "bokmärkesvalsåtgärder",
   "app-menu-bookmark-actions-reasoning": "resonemang",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-bookmark-current-view": "bokmärk aktuell vy",
+  "app-menu-add-bookmark": "Lägg till bokmärke",
+  "app-menu-add-bookmark-title": "titel",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "bilder",
+  "app-menu-add-bookmark-clear-files": "rensa filer",
+  "app-menu-add-bookmark-submit": "Lägg till bokmärke",
   "app-menu-import-as": "importera bokmärken",
   "app-menu-export-as": "exportera bokmärken",
-  "app-menu-bookmark-actions-media": "media",
   "app-menu-upload-json": "ladda upp",
-  "app-menu-bookmark-current-view": "bokmärk aktuell vy",
   "app-menu-visual-search": "visuell sökning",
   "app-menu-reading-assistance": "läshjälp",
   "app-menu-bread": "ord-börja fetstil",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "tonhöjd",
   "app-menu-fullscreen-active-pane": "helskärm den aktiva rutan",
   "app-menu-toggle-sidebar": "växla sidofältet",
-  "app-menu-add-bookmark": "Lägg till bokmärke",
   "app-menu-note-1": "not 1: endast tillgänglig när fokus är på sidofältet eller en Wikipedia-artikelruta.",
   "app-menu-features": "Funktioner",
   "app-menu-persona": "persona",
   "app-menu-country-select": "Land",
   "app-menu-interests": "intressen",
-  "app-menu-nature-location-quiz": "naturplats frågesport",
   "app-menu-command-editor": "kommandoredigerare",
   "app-menu-presentation": "presentation",
   "app-menu-editor": "redaktör",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "gå till föregående ruta",
   "app-menu-new-search": "ny sökning",
   "app-menu-structured-search": "strukturerad sökning",
-  "app-menu-geospatial-search": "geografisk sökning",
+  "app-menu-geospatial-search": "geospatial sökning",
   "app-section-main": "huvud",
   "app-section-info": "info",
   "app-section-library": "bibliotek",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "minerologi",
   "app-section-science-archeology": "arkeologi",
   "app-section-science-mathematics": "matematik",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
+  "app-section-science-physics": "fysik",
+  "app-section-science-computing": "datoranvändning",
   "app-section-media-datasets": "datauppsättningar",
   "app-section-media-datasets-general": "allmän",
   "app-section-media-datasets-topical": "aktuell",
@@ -187,7 +200,7 @@
   "app-guide-bookmark-similarities": "likheter",
   "app-guide-bookmark-implications": "implikationer",
   "app-guide-bookmark-history": "historia",
-  "app-guide-bookmark-gapminder-country-trend": "landstrend",
+  "app-guide-bookmark-gapminder-country-trend": "land trend",
   "app-guide-see-more": "se mer",
   "app-guide-page": "sida",
   "app-guide-current-events": "Aktuella händelser",
