--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -14,26 +14,38 @@
   "app-title-sub": "ndogo",
   "app-title-pages": "kurasa",
   "app-title-citations": "Manukuu",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Vifunguo vya API",
+  "app-menu-search-in": "tafuta ndani",
+  "app-menu-search-in-option-reference": "kazi za kumbukumbu",
+  "app-menu-search-in-option-culture": "utamaduni",
+  "app-menu-search-in-option-science": "sayansi",
+  "app-menu-search-in-option-business": "biashara",
+  "app-menu-filter-by": "chujio kwa",
+  "app-menu-filter-by-option-text": "maandishi",
+  "app-menu-filter-by-option-image": "picha",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "sauti",
+  "app-menu-filter-by-option-data": "data",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "programu",
+  "app-menu-filter-by-option-archive": "kumbukumbu",
+  "app-menu-filter-by-option-entity": "chombo",
+  "app-menu-filter-by-year-range": "kipindi cha mwaka",
+  "app-menu-nature-location-quiz": "swali la eneo la asili",
+  "app-menu-sort-by": "panga kwa",
+  "app-menu-sort-by-option-relevance-desc": "umuhimu ↓",
+  "app-menu-sort-by-option-relevance-asc": "umuhimu ↑",
+  "app-menu-sort-by-option-date-desc": "tarehe ↓",
+  "app-menu-sort-by-option-date-asc": "tarehe ↑",
+  "app-menu-sort-by-option-update-desc": "sasisha ↓",
+  "app-menu-sort-by-option-update-asc": "sasisha ↑",
+  "app-menu-sort-by-option-random": "nasibu",
+  "app-menu-sort-by-option-citations-desc": "manukuu ↓",
+  "app-menu-sort-by-option-citations-asc": "manukuu ↑",
+  "app-menu-sort-by-option-title-asc": "kichwa ↑",
+  "app-menu-sort-by-option-title-desc": "kichwa ↓",
+  "app-menu-sort-by-option-distance-asc": "umbali ↑",
+  "app-menu-sort-by-option-distance-desc": "umbali ↓",
   "app-menu-actions": "Vitendo",
   "app-menu-background-audio": "sauti",
   "app-menu-background-midi": "MIDI",
@@ -41,8 +53,10 @@
   "app-menu-various-links": "viungo mbalimbali",
   "app-menu-font": "fonti",
   "app-menu-theme": "mandhari",
-  "app-menu-interface-language": "lugha ya interface",
+  "app-menu-interface-language": "lugha ya kiolesura",
   "app-menu-voice": "sauti",
+  "app-menu-show-inline-help": "onyesha usaidizi wa ndani",
+  "app-menu-inline-help": "msaada wa ndani",
   "app-menu-user-manual": "mwongozo wa mtumiaji",
   "app-menu-keyboard-shortcuts": "njia za mkato za kibodi",
   "app-menu-credits": "mikopo",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "geuza skrini nzima",
   "app-menu-bookmark-actions": "vitendo vya uteuzi wa alamisho",
   "app-menu-bookmark-actions-reasoning": "hoja",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "vyombo vya habari",
+  "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
+  "app-menu-add-bookmark": "ongeza alamisho",
+  "app-menu-add-bookmark-title": "kichwa",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "Picha",
+  "app-menu-add-bookmark-clear-files": "futa faili",
+  "app-menu-add-bookmark-submit": "ongeza alamisho",
   "app-menu-import-as": "ingiza alamisho",
   "app-menu-export-as": "safirisha alamisho",
-  "app-menu-bookmark-actions-media": "vyombo vya habari",
   "app-menu-upload-json": "pakia",
-  "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
   "app-menu-visual-search": "utafutaji wa kuona",
   "app-menu-reading-assistance": "msaada wa kusoma",
   "app-menu-bread": "neno-anza kwa ujasiri",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "lami",
   "app-menu-fullscreen-active-pane": "skrini nzima kidirisha kinachotumika",
   "app-menu-toggle-sidebar": "geuza utepe",
-  "app-menu-add-bookmark": "ongeza alamisho",
   "app-menu-note-1": "kumbuka 1: inapatikana tu wakati lengo liko kwenye utepe au kidirisha cha makala cha Wikipedia.",
   "app-menu-features": "vipengele",
   "app-menu-persona": "mtu",
   "app-menu-country-select": "nchi",
   "app-menu-interests": "maslahi",
-  "app-menu-nature-location-quiz": "swali la eneo la asili",
   "app-menu-command-editor": "mhariri wa amri",
   "app-menu-presentation": "uwasilishaji",
   "app-menu-editor": "mhariri",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "madini",
   "app-section-science-archeology": "akiolojia",
   "app-section-science-mathematics": "hisabati",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "elimu ya nyota",
+  "app-section-science-physics": "fizikia",
+  "app-section-science-computing": "kompyuta",
   "app-section-media-datasets": "seti za data",
   "app-section-media-datasets-general": "jumla",
   "app-section-media-datasets-topical": "mada",
