--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -14,26 +14,38 @@
   "app-title-sub": "துணை",
   "app-title-pages": "பக்கங்கள்",
   "app-title-citations": "மேற்கோள்கள்",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API விசைகள்",
+  "app-menu-search-in": "தேடுங்கள்",
+  "app-menu-search-in-option-reference": "குறிப்பு படைப்புகள்",
+  "app-menu-search-in-option-culture": "கலாச்சாரம்",
+  "app-menu-search-in-option-science": "அறிவியல்",
+  "app-menu-search-in-option-business": "வணிக",
+  "app-menu-filter-by": "மூலம் வடிகட்டி",
+  "app-menu-filter-by-option-text": "உரை",
+  "app-menu-filter-by-option-image": "படம்",
+  "app-menu-filter-by-option-video": "காணொளி",
+  "app-menu-filter-by-option-audio": "ஆடியோ",
+  "app-menu-filter-by-option-data": "தகவல்கள்",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "மென்பொருள்",
+  "app-menu-filter-by-option-archive": "காப்பகம்",
+  "app-menu-filter-by-option-entity": "நிறுவனம்",
+  "app-menu-filter-by-year-range": "ஆண்டு வரம்பு",
+  "app-menu-nature-location-quiz": "இயற்கை இருப்பிட வினாடி வினா",
+  "app-menu-sort-by": "வரிசைப்படுத்தவும்",
+  "app-menu-sort-by-option-relevance-desc": "சம்பந்தம் ↓",
+  "app-menu-sort-by-option-relevance-asc": "சம்பந்தம் ↑",
+  "app-menu-sort-by-option-date-desc": "தேதி ↓",
+  "app-menu-sort-by-option-date-asc": "தேதி ↑",
+  "app-menu-sort-by-option-update-desc": "புதுப்பிப்பு ↓",
+  "app-menu-sort-by-option-update-asc": "புதுப்பிப்பு ↑",
+  "app-menu-sort-by-option-random": "சீரற்ற",
+  "app-menu-sort-by-option-citations-desc": "மேற்கோள்கள் ↓",
+  "app-menu-sort-by-option-citations-asc": "மேற்கோள்கள் ↑",
+  "app-menu-sort-by-option-title-asc": "தலைப்பு ↑",
+  "app-menu-sort-by-option-title-desc": "தலைப்பு ↓",
+  "app-menu-sort-by-option-distance-asc": "தூரம் ↑",
+  "app-menu-sort-by-option-distance-desc": "தூரம் ↓",
   "app-menu-actions": "செயல்கள்",
   "app-menu-background-audio": "ஆடியோ",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "தீம்",
   "app-menu-interface-language": "இடைமுக மொழி",
   "app-menu-voice": "குரல்",
+  "app-menu-show-inline-help": "இன்லைன் உதவியைக் காட்டு",
+  "app-menu-inline-help": "இன்லைன் உதவி",
   "app-menu-user-manual": "பயனர் கையேடு",
   "app-menu-keyboard-shortcuts": "விசைப்பலகை குறுக்குவழிகள்",
   "app-menu-credits": "வரவுகள்",
@@ -53,19 +67,20 @@
   "app-menu-toggle-fullscreen": "மாற்று முழுத்திரை",
   "app-menu-bookmark-actions": "புக்மார்க்-தேர்வு நடவடிக்கைகள்",
   "app-menu-bookmark-actions-reasoning": "நியாயப்படுத்துதல்",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "ஊடகம்",
+  "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
+  "app-menu-add-bookmark": "புக்மார்க் சேர்க்கவும்",
+  "app-menu-add-bookmark-title": "தலைப்பு",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "படங்கள்",
+  "app-menu-add-bookmark-clear-files": "கோப்புகளை அழிக்கவும்",
+  "app-menu-add-bookmark-submit": "புக்மார்க் சேர்க்கவும்",
   "app-menu-import-as": "புக்மார்க்குகளை இறக்குமதி",
   "app-menu-export-as": "புக்மார்க்குகளை ஏற்றுமதி செய்யவும்",
-  "app-menu-bookmark-actions-media": "ஊடகம்",
   "app-menu-upload-json": "பதிவேற்றம்",
-  "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
   "app-menu-visual-search": "காட்சி தேடல்",
   "app-menu-reading-assistance": "வாசிப்பு உதவி",
-  "app-menu-bread": "வார்த்தை-தொடக்க தடித்த",
+  "app-menu-bread": "வார்த்தை-தொடக்கம் போல்டிங்",
   "app-menu-ai-tutor": "AI ஆசிரியர்",
   "app-menu-datasources": "தரவு மூலங்கள்",
   "app-menu-clone-tab": "குளோன் தாவல்",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "சுருதி",
   "app-menu-fullscreen-active-pane": "செயலில் உள்ள பலகத்தின் முழுத்திரை",
   "app-menu-toggle-sidebar": "பக்கப்பட்டியை மாற்றவும்",
-  "app-menu-add-bookmark": "புக்மார்க் சேர்க்கவும்",
   "app-menu-note-1": "குறிப்பு 1: பக்கப்பட்டியில் அல்லது விக்கிபீடியா கட்டுரை பலகத்தில் கவனம் செலுத்தினால் மட்டுமே கிடைக்கும்.",
   "app-menu-features": "அம்சங்கள்",
   "app-menu-persona": "ஆளுமை",
   "app-menu-country-select": "நாடு",
   "app-menu-interests": "நலன்கள்",
-  "app-menu-nature-location-quiz": "இயற்கை இருப்பிட வினாடி வினா",
   "app-menu-command-editor": "கட்டளை ஆசிரியர்",
   "app-menu-presentation": "விளக்கக்காட்சி",
   "app-menu-editor": "ஆசிரியர்",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "முந்தைய பலகத்திற்குச் செல்லவும்",
   "app-menu-new-search": "புதிய தேடல்",
   "app-menu-structured-search": "கட்டமைக்கப்பட்ட தேடல்",
-  "app-menu-geospatial-search": "புவியியல் தேடல்",
+  "app-menu-geospatial-search": "புவிசார் தேடல்",
   "app-section-main": "முக்கிய",
   "app-section-info": "தகவல்",
   "app-section-library": "நூலகம்",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "கனிமவியல்",
   "app-section-science-archeology": "தொல்லியல்",
   "app-section-science-mathematics": "கணிதம்",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "வானியல்",
+  "app-section-science-physics": "இயற்பியல்",
+  "app-section-science-computing": "கம்ப்யூட்டிங்",
   "app-section-media-datasets": "தரவுத்தொகுப்புகள்",
   "app-section-media-datasets-general": "பொது",
   "app-section-media-datasets-topical": "மேற்பூச்சு",
