--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -14,26 +14,38 @@
   "app-title-sub": "alt",
   "app-title-pages": "sayfalar",
   "app-title-citations": "Alıntılar",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API anahtarları",
+  "app-menu-search-in": "araştır",
+  "app-menu-search-in-option-reference": "Referans çalışmaları",
+  "app-menu-search-in-option-culture": "kültür",
+  "app-menu-search-in-option-science": "bilim",
+  "app-menu-search-in-option-business": "işletme",
+  "app-menu-filter-by": "tarafından filtre",
+  "app-menu-filter-by-option-text": "metin",
+  "app-menu-filter-by-option-image": "resim",
+  "app-menu-filter-by-option-video": "video",
+  "app-menu-filter-by-option-audio": "ses",
+  "app-menu-filter-by-option-data": "veri",
+  "app-menu-filter-by-option-3D": "3 boyutlu",
+  "app-menu-filter-by-option-software": "yazılım",
+  "app-menu-filter-by-option-archive": "Arşiv",
+  "app-menu-filter-by-option-entity": "varlık",
+  "app-menu-filter-by-year-range": "yıl aralığı",
+  "app-menu-nature-location-quiz": "doğa konumu yarışması",
+  "app-menu-sort-by": "göre sırala",
+  "app-menu-sort-by-option-relevance-desc": "alaka düzeyi ↓",
+  "app-menu-sort-by-option-relevance-asc": "alaka düzeyi ↑",
+  "app-menu-sort-by-option-date-desc": "tarih ↓",
+  "app-menu-sort-by-option-date-asc": "tarih ↑",
+  "app-menu-sort-by-option-update-desc": "güncelleme ↓",
+  "app-menu-sort-by-option-update-asc": "güncelleme ↑",
+  "app-menu-sort-by-option-random": "rastgele",
+  "app-menu-sort-by-option-citations-desc": "alıntılar ↓",
+  "app-menu-sort-by-option-citations-asc": "alıntılar ↑",
+  "app-menu-sort-by-option-title-asc": "başlık ↑",
+  "app-menu-sort-by-option-title-desc": "başlık ↓",
+  "app-menu-sort-by-option-distance-asc": "mesafe ↑",
+  "app-menu-sort-by-option-distance-desc": "mesafe ↓",
   "app-menu-actions": "hareketler",
   "app-menu-background-audio": "ses",
   "app-menu-background-midi": "MİDİ",
@@ -43,6 +55,8 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "arayüz dili",
   "app-menu-voice": "ses",
+  "app-menu-show-inline-help": "satır içi yardımı göster",
+  "app-menu-inline-help": "satır içi yardım",
   "app-menu-user-manual": "Kullanım kılavuzu",
   "app-menu-keyboard-shortcuts": "Klavye kısayolları",
   "app-menu-credits": "kredi",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "tam ekrana geç",
   "app-menu-bookmark-actions": "yer imi seçimi eylemleri",
   "app-menu-bookmark-actions-reasoning": "muhakeme",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "medya",
+  "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
+  "app-menu-add-bookmark": "imi eklemek",
+  "app-menu-add-bookmark-title": "başlık",
+  "app-menu-add-bookmark-url": "URL",
+  "app-menu-add-bookmark-images": "Görüntüler",
+  "app-menu-add-bookmark-clear-files": "dosyaları temizle",
+  "app-menu-add-bookmark-submit": "imi eklemek",
   "app-menu-import-as": "yer işaretlerini içe aktar",
   "app-menu-export-as": "yer işaretlerini dışa aktar",
-  "app-menu-bookmark-actions-media": "medya",
   "app-menu-upload-json": "yüklemek",
-  "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
   "app-menu-visual-search": "görsel arama",
   "app-menu-reading-assistance": "okuma yardımı",
   "app-menu-bread": "kelime başlangıcı kalınlaştırma",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "saha",
   "app-menu-fullscreen-active-pane": "etkin bölmeyi tam ekran",
   "app-menu-toggle-sidebar": "kenar çubuğunu değiştir",
-  "app-menu-add-bookmark": "imi eklemek",
   "app-menu-note-1": "not 1: yalnızca odak kenar çubuğunda veya Vikipedi makale bölmesinde olduğunda kullanılabilir.",
   "app-menu-features": "özellikler",
   "app-menu-persona": "kişilik",
   "app-menu-country-select": "ülke",
   "app-menu-interests": "ilgi alanları",
-  "app-menu-nature-location-quiz": "doğa konumu yarışması",
   "app-menu-command-editor": "komut düzenleyici",
   "app-menu-presentation": "sunum",
   "app-menu-editor": "editör",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "mineraloloji",
   "app-section-science-archeology": "arkeoloji",
   "app-section-science-mathematics": "matematik",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
+  "app-section-science-physics": "fizik",
+  "app-section-science-computing": "bilgi işlem",
   "app-section-media-datasets": "veri kümeleri",
   "app-section-media-datasets-general": "genel",
   "app-section-media-datasets-topical": "güncel",
@@ -165,7 +178,7 @@
   "app-section-library-products": "ürünler",
   "app-section-media": "medya",
   "app-section-media-video": "video",
-  "app-section-media-image": "görüntü",
+  "app-section-media-image": "resim",
   "app-section-media-audio": "ses",
   "app-section-media-software": "yazılım",
   "app-section-meta": "meta",
