--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -14,26 +14,38 @@
   "app-title-sub": "суб",
   "app-title-pages": "сторінки",
   "app-title-citations": "Цитування",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Ключі API",
+  "app-menu-search-in": "шукати в",
+  "app-menu-search-in-option-reference": "довідкові праці",
+  "app-menu-search-in-option-culture": "культури",
+  "app-menu-search-in-option-science": "наука",
+  "app-menu-search-in-option-business": "бізнес",
+  "app-menu-filter-by": "фільтрувати за",
+  "app-menu-filter-by-option-text": "текст",
+  "app-menu-filter-by-option-image": "зображення",
+  "app-menu-filter-by-option-video": "відео",
+  "app-menu-filter-by-option-audio": "аудіо",
+  "app-menu-filter-by-option-data": "даних",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "програмне забезпечення",
+  "app-menu-filter-by-option-archive": "архів",
+  "app-menu-filter-by-option-entity": "сутність",
+  "app-menu-filter-by-year-range": "річний діапазон",
+  "app-menu-nature-location-quiz": "вікторина про розташування природи",
+  "app-menu-sort-by": "сортувати за",
+  "app-menu-sort-by-option-relevance-desc": "актуальність ↓",
+  "app-menu-sort-by-option-relevance-asc": "релевантність ↑",
+  "app-menu-sort-by-option-date-desc": "дата ↓",
+  "app-menu-sort-by-option-date-asc": "дата ↑",
+  "app-menu-sort-by-option-update-desc": "оновлення ↓",
+  "app-menu-sort-by-option-update-asc": "оновлення ↑",
+  "app-menu-sort-by-option-random": "випадковий",
+  "app-menu-sort-by-option-citations-desc": "цитати ↓",
+  "app-menu-sort-by-option-citations-asc": "цитати ↑",
+  "app-menu-sort-by-option-title-asc": "назва ↑",
+  "app-menu-sort-by-option-title-desc": "назва ↓",
+  "app-menu-sort-by-option-distance-asc": "відстань ↑",
+  "app-menu-sort-by-option-distance-desc": "відстань ↓",
   "app-menu-actions": "дії",
   "app-menu-background-audio": "аудіо",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "тема",
   "app-menu-interface-language": "мова інтерфейсу",
   "app-menu-voice": "голос",
+  "app-menu-show-inline-help": "показати вбудовану довідку",
+  "app-menu-inline-help": "вбудована довідка",
   "app-menu-user-manual": "посібник користувача",
   "app-menu-keyboard-shortcuts": "Гарячі клавіши",
   "app-menu-credits": "кредити",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "перемкнути повноекранний режим",
   "app-menu-bookmark-actions": "дії закладки-вибору",
   "app-menu-bookmark-actions-reasoning": "міркування",
-  "app-menu-add-bookmark-title": "title",
+  "app-menu-bookmark-actions-media": "ЗМІ",
+  "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
+  "app-menu-add-bookmark": "Додати закладку",
+  "app-menu-add-bookmark-title": "назва",
   "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-add-bookmark-images": "зображення",
+  "app-menu-add-bookmark-clear-files": "очистити файли",
+  "app-menu-add-bookmark-submit": "Додати закладку",
   "app-menu-import-as": "імпортувати закладки",
   "app-menu-export-as": "експортувати закладки",
-  "app-menu-bookmark-actions-media": "ЗМІ",
   "app-menu-upload-json": "завантажити",
-  "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
   "app-menu-visual-search": "візуальний пошук",
   "app-menu-reading-assistance": "допомога в читанні",
   "app-menu-bread": "початок слова жирним шрифтом",
@@ -87,17 +102,15 @@
   "app-menu-pitch": "крок",
   "app-menu-fullscreen-active-pane": "на весь екран активної панелі",
   "app-menu-toggle-sidebar": "перемкнути бічну панель",
-  "app-menu-add-bookmark": "Додати закладку",
   "app-menu-note-1": "примітка 1: доступно лише тоді, коли фокус знаходиться на бічній панелі або на панелі статей у Вікіпедії.",
   "app-menu-features": "особливості",
   "app-menu-persona": "персона",
   "app-menu-country-select": "країна",
   "app-menu-interests": "інтереси",
-  "app-menu-nature-location-quiz": "вікторина про розташування природи",
   "app-menu-command-editor": "редактор команд",
   "app-menu-presentation": "презентація",
   "app-menu-editor": "редактор",
-  "app-menu-run-code": "бігати",
+  "app-menu-run-code": "бігти",
   "app-menu-clear-editor": "ясно",
   "app-menu-cover-topic": "тема покриття",
   "app-menu-news": "новини",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "перейти до попередньої панелі",
   "app-menu-new-search": "новий пошук",
   "app-menu-structured-search": "структурований пошук",
-  "app-menu-geospatial-search": "географічний пошук",
+  "app-menu-geospatial-search": "геопросторовий пошук",
   "app-section-main": "основний",
   "app-section-info": "інформація",
   "app-section-library": "бібліотека",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "мінералогії",
   "app-section-science-archeology": "археологія",
   "app-section-science-mathematics": "математика",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "астрономія",
+  "app-section-science-physics": "фізика",
+  "app-section-science-computing": "обчислення",
   "app-section-media-datasets": "набори даних",
   "app-section-media-datasets-general": "загальний",
   "app-section-media-datasets-topical": "актуальні",
