--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -14,35 +14,49 @@
   "app-title-sub": "ذیلی",
   "app-title-pages": "صفحات",
   "app-title-citations": "حوالہ جات",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API کیز",
+  "app-menu-search-in": "تلاش کریں",
+  "app-menu-search-in-option-reference": "حوالہ کام",
+  "app-menu-search-in-option-culture": "ثقافت",
+  "app-menu-search-in-option-science": "سائنس",
+  "app-menu-search-in-option-business": "کاروبار",
+  "app-menu-filter-by": "کی طرف سے فلٹر",
+  "app-menu-filter-by-option-text": "متن",
+  "app-menu-filter-by-option-image": "تصویر",
+  "app-menu-filter-by-option-video": "ویڈیو",
+  "app-menu-filter-by-option-audio": "آڈیو",
+  "app-menu-filter-by-option-data": "ڈیٹا",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "سافٹ ویئر",
+  "app-menu-filter-by-option-archive": "محفوظ شدہ دستاویزات",
+  "app-menu-filter-by-option-entity": "ہستی",
+  "app-menu-filter-by-year-range": "سال کی حد",
+  "app-menu-nature-location-quiz": "فطرت کے مقام کا کوئز",
+  "app-menu-sort-by": "ترتیب دیں",
+  "app-menu-sort-by-option-relevance-desc": "مطابقت ↓",
+  "app-menu-sort-by-option-relevance-asc": "مطابقت ↑",
+  "app-menu-sort-by-option-date-desc": "تاریخ ↓",
+  "app-menu-sort-by-option-date-asc": "تاریخ ↑",
+  "app-menu-sort-by-option-update-desc": "اپ ڈیٹ ↓",
+  "app-menu-sort-by-option-update-asc": "اپ ڈیٹ کریں ↑",
+  "app-menu-sort-by-option-random": "بے ترتیب",
+  "app-menu-sort-by-option-citations-desc": "حوالہ جات ↓",
+  "app-menu-sort-by-option-citations-asc": "حوالہ جات ↑",
+  "app-menu-sort-by-option-title-asc": "عنوان ↑",
+  "app-menu-sort-by-option-title-desc": "عنوان ↓",
+  "app-menu-sort-by-option-distance-asc": "فاصلہ ↑",
+  "app-menu-sort-by-option-distance-desc": "فاصلہ ↓",
   "app-menu-actions": "اعمال",
   "app-menu-background-audio": "آڈیو",
   "app-menu-background-midi": "MIDI",
-  "app-menu-topic-lists": "موضوع کی فہرستیں",
+  "app-menu-topic-lists": "عنوانات کی فہرستیں",
   "app-menu-various-links": "مختلف لنکس",
   "app-menu-font": "فونٹ",
   "app-menu-theme": "خیالیہ",
   "app-menu-interface-language": "انٹرفیس کی زبان",
   "app-menu-voice": "آواز",
+  "app-menu-show-inline-help": "ان لائن مدد دکھائیں۔",
+  "app-menu-inline-help": "ان لائن مدد",
   "app-menu-user-manual": "صارف دستی",
   "app-menu-keyboard-shortcuts": "کی بورڈ شارٹ کٹس",
   "app-menu-credits": "کریڈٹ",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "پوری اسکرین کو ٹوگل کریں۔",
   "app-menu-bookmark-actions": "بک مارک کے انتخاب کے اعمال",
   "app-menu-bookmark-actions-reasoning": "استدلال",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "میڈیا",
+  "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
+  "app-menu-add-bookmark": "بک مارک شامل کریں",
+  "app-menu-add-bookmark-title": "عنوان",
+  "app-menu-add-bookmark-url": "یو آر ایل",
+  "app-menu-add-bookmark-images": "تصاویر",
+  "app-menu-add-bookmark-clear-files": "فائلیں صاف کریں۔",
+  "app-menu-add-bookmark-submit": "بک مارک شامل کریں",
   "app-menu-import-as": "بُک مارکس درآمد کریں۔",
   "app-menu-export-as": "بک مارکس برآمد کریں۔",
-  "app-menu-bookmark-actions-media": "میڈیا",
   "app-menu-upload-json": "اپ لوڈ کریں",
-  "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
   "app-menu-visual-search": "بصری تلاش",
   "app-menu-reading-assistance": "پڑھنے کی مدد",
   "app-menu-bread": "لفظ بولڈ شروع کریں",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "پچ",
   "app-menu-fullscreen-active-pane": "فعال پین کی پوری اسکرین کریں۔",
   "app-menu-toggle-sidebar": "سائڈبار کو ٹوگل کریں۔",
-  "app-menu-add-bookmark": "بک مارک شامل کریں",
   "app-menu-note-1": "نوٹ 1: صرف اس وقت دستیاب ہے جب فوکس سائڈبار یا ویکیپیڈیا آرٹیکل پین پر ہو۔",
   "app-menu-features": "خصوصیات",
   "app-menu-persona": "شخصیت",
   "app-menu-country-select": "ملک",
   "app-menu-interests": "مفادات",
-  "app-menu-nature-location-quiz": "فطرت کے مقام کا کوئز",
   "app-menu-command-editor": "کمانڈ ایڈیٹر",
   "app-menu-presentation": "پیشکش",
   "app-menu-editor": "ایڈیٹر",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "معدنیات",
   "app-section-science-archeology": "آثار قدیمہ",
   "app-section-science-mathematics": "ریاضی",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "فلکیات",
+  "app-section-science-physics": "طبیعیات",
+  "app-section-science-computing": "کمپیوٹنگ",
   "app-section-media-datasets": "ڈیٹاسیٹس",
   "app-section-media-datasets-general": "جنرل",
   "app-section-media-datasets-topical": "حالات",
