--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -14,26 +14,38 @@
   "app-title-sub": "phụ",
   "app-title-pages": "trang",
   "app-title-citations": "Trích dẫn",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "Khóa API",
+  "app-menu-search-in": "tìm kiếm ở",
+  "app-menu-search-in-option-reference": "tác phẩm tham khảo",
+  "app-menu-search-in-option-culture": "văn hoá",
+  "app-menu-search-in-option-science": "khoa học",
+  "app-menu-search-in-option-business": "việc kinh doanh",
+  "app-menu-filter-by": "lọc bởi",
+  "app-menu-filter-by-option-text": "chữ",
+  "app-menu-filter-by-option-image": "hình ảnh",
+  "app-menu-filter-by-option-video": "băng hình",
+  "app-menu-filter-by-option-audio": "âm thanh",
+  "app-menu-filter-by-option-data": "dữ liệu",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "phần mềm",
+  "app-menu-filter-by-option-archive": "lưu trữ",
+  "app-menu-filter-by-option-entity": "thực thể",
+  "app-menu-filter-by-year-range": "phạm vi năm",
+  "app-menu-nature-location-quiz": "trắc nghiệm vị trí thiên nhiên",
+  "app-menu-sort-by": "sắp xếp theo",
+  "app-menu-sort-by-option-relevance-desc": "mức độ liên quan ↓",
+  "app-menu-sort-by-option-relevance-asc": "mức độ liên quan ↑",
+  "app-menu-sort-by-option-date-desc": "ngày ↓",
+  "app-menu-sort-by-option-date-asc": "ngày ↑",
+  "app-menu-sort-by-option-update-desc": "cập nhật ↓",
+  "app-menu-sort-by-option-update-asc": "cập nhật ↑",
+  "app-menu-sort-by-option-random": "ngẫu nhiên",
+  "app-menu-sort-by-option-citations-desc": "trích dẫn ↓",
+  "app-menu-sort-by-option-citations-asc": "trích dẫn ↑",
+  "app-menu-sort-by-option-title-asc": "tiêu đề ↑",
+  "app-menu-sort-by-option-title-desc": "tiêu đề ↓",
+  "app-menu-sort-by-option-distance-asc": "khoảng cách ↑",
+  "app-menu-sort-by-option-distance-desc": "khoảng cách ↓",
   "app-menu-actions": "hành động",
   "app-menu-background-audio": "âm thanh",
   "app-menu-background-midi": "MIDI",
@@ -43,6 +55,8 @@
   "app-menu-theme": "chủ đề",
   "app-menu-interface-language": "ngôn ngữ giao diện",
   "app-menu-voice": "tiếng nói",
+  "app-menu-show-inline-help": "hiển thị trợ giúp nội tuyến",
+  "app-menu-inline-help": "trợ giúp nội tuyến",
   "app-menu-user-manual": "hướng dẫn sử dụng",
   "app-menu-keyboard-shortcuts": "các phím tắt bàn phím",
   "app-menu-credits": "tín dụng",
@@ -53,16 +67,17 @@
   "app-menu-toggle-fullscreen": "bật chế độ toàn màn hình",
   "app-menu-bookmark-actions": "hành động chọn dấu trang",
   "app-menu-bookmark-actions-reasoning": "lý luận",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "phương tiện truyền thông",
+  "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
+  "app-menu-add-bookmark": "thêm dấu trang",
+  "app-menu-add-bookmark-title": "tiêu đề",
+  "app-menu-add-bookmark-url": "địa chỉ",
+  "app-menu-add-bookmark-images": "hình ảnh",
+  "app-menu-add-bookmark-clear-files": "xóa tập tin",
+  "app-menu-add-bookmark-submit": "thêm dấu trang",
   "app-menu-import-as": "nhập dấu trang",
   "app-menu-export-as": "xuất dấu trang",
-  "app-menu-bookmark-actions-media": "phương tiện truyền thông",
   "app-menu-upload-json": "tải lên",
-  "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
   "app-menu-visual-search": "tìm kiếm trực quan",
   "app-menu-reading-assistance": "hỗ trợ đọc",
   "app-menu-bread": "in đậm đầu từ",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "sân bóng đá",
   "app-menu-fullscreen-active-pane": "toàn màn hình khung hoạt động",
   "app-menu-toggle-sidebar": "chuyển đổi thanh bên",
-  "app-menu-add-bookmark": "thêm dấu trang",
   "app-menu-note-1": "lưu ý 1: chỉ khả dụng khi tiêu điểm nằm ở thanh bên hoặc khung bài viết Wikipedia.",
   "app-menu-features": "đặc trưng",
   "app-menu-persona": "tính cách",
   "app-menu-country-select": "quốc gia",
   "app-menu-interests": "sở thích",
-  "app-menu-nature-location-quiz": "trắc nghiệm vị trí thiên nhiên",
   "app-menu-command-editor": "soạn thảo lệnh",
   "app-menu-presentation": "bài thuyết trình",
   "app-menu-editor": "biên tập viên",
@@ -105,12 +118,12 @@
   "app-menu-nature": "thiên nhiên",
   "app-menu-license": "giấy phép",
   "app-menu-goto-next-topic": "đi tới chủ đề tiếp theo (trong kết quả thanh bên)",
-  "app-menu-goto-previous-topic": "đi đến chủ đề trước đó (trong kết quả thanh bên)",
-  "app-menu-goto-next-pane": "đi tới khung tiếp theo",
+  "app-menu-goto-previous-topic": "đi tới chủ đề trước đó (trong kết quả thanh bên)",
+  "app-menu-goto-next-pane": "đi đến khung tiếp theo",
   "app-menu-goto-previous-pane": "đi đến khung trước",
   "app-menu-new-search": "tìm kiếm mới",
   "app-menu-structured-search": "tìm kiếm có cấu trúc",
-  "app-menu-geospatial-search": "tìm kiếm địa lý",
+  "app-menu-geospatial-search": "tìm kiếm không gian địa lý",
   "app-section-main": "chủ yếu",
   "app-section-info": "thông tin",
   "app-section-library": "thư viện",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "khoáng vật học",
   "app-section-science-archeology": "khảo cổ học",
   "app-section-science-mathematics": "toán học",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "thiên văn học",
+  "app-section-science-physics": "vật lý",
+  "app-section-science-computing": "tin học",
   "app-section-media-datasets": "bộ dữ liệu",
   "app-section-media-datasets-general": "tổng quan",
   "app-section-media-datasets-topical": "chuyên đề",
