--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -14,26 +14,38 @@
   "app-title-sub": "子",
   "app-title-pages": "页面",
   "app-title-citations": "引文",
-  "app-menu-sort-by": "sort by",
-  "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "reference",
-  "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
-  "app-menu-search-in-option-culture": "culture",
-  "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-business": "business",
-  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
-  "app-menu-sort-by-option-date-desc": "date ↓",
-  "app-menu-sort-by-option-date-asc": "date ↑",
-  "app-menu-sort-by-option-update-asc": "update ↑",
-  "app-menu-sort-by-option-update-desc": "update ↓",
-  "app-menu-sort-by-option-random": "random",
-  "app-menu-sort-by-option-citations-desc": "citations ↓",
-  "app-menu-sort-by-option-citations-asc": "citations ↑",
-  "app-menu-sort-by-option-title-desc": "title ↓",
-  "app-menu-sort-by-option-title-asc": "title ↑",
-  "app-menu-sort-by-option-distance-asc": "distance ↑",
-  "app-menu-sort-by-option-distance-desc": "distance ↓",
+  "app-menu-api-keys": "API 密钥",
+  "app-menu-search-in": "搜索",
+  "app-menu-search-in-option-reference": "参考作品",
+  "app-menu-search-in-option-culture": "文化",
+  "app-menu-search-in-option-science": "科学",
+  "app-menu-search-in-option-business": "商业",
+  "app-menu-filter-by": "过滤",
+  "app-menu-filter-by-option-text": "文本",
+  "app-menu-filter-by-option-image": "图像",
+  "app-menu-filter-by-option-video": "视频",
+  "app-menu-filter-by-option-audio": "声音的",
+  "app-menu-filter-by-option-data": "数据",
+  "app-menu-filter-by-option-3D": "3D",
+  "app-menu-filter-by-option-software": "软件",
+  "app-menu-filter-by-option-archive": "档案",
+  "app-menu-filter-by-option-entity": "实体",
+  "app-menu-filter-by-year-range": "年份范围",
+  "app-menu-nature-location-quiz": "自然位置测验",
+  "app-menu-sort-by": "排序方式",
+  "app-menu-sort-by-option-relevance-desc": "相关性↓",
+  "app-menu-sort-by-option-relevance-asc": "相关性↑",
+  "app-menu-sort-by-option-date-desc": "日期↓",
+  "app-menu-sort-by-option-date-asc": "日期↑",
+  "app-menu-sort-by-option-update-desc": "更新↓",
+  "app-menu-sort-by-option-update-asc": "更新↑",
+  "app-menu-sort-by-option-random": "随机的",
+  "app-menu-sort-by-option-citations-desc": "引用次数↓",
+  "app-menu-sort-by-option-citations-asc": "引用次数↑",
+  "app-menu-sort-by-option-title-asc": "标题↑",
+  "app-menu-sort-by-option-title-desc": "标题↓",
+  "app-menu-sort-by-option-distance-asc": "距离↑",
+  "app-menu-sort-by-option-distance-desc": "距离↓",
   "app-menu-actions": "行动",
   "app-menu-background-audio": "声音的",
   "app-menu-background-midi": "MIDI",
@@ -43,26 +55,29 @@
   "app-menu-theme": "主题",
   "app-menu-interface-language": "界面语言",
   "app-menu-voice": "嗓音",
+  "app-menu-show-inline-help": "显示内联帮助",
+  "app-menu-inline-help": "内联帮助",
   "app-menu-user-manual": "用户手册",
   "app-menu-keyboard-shortcuts": "键盘快捷键",
   "app-menu-credits": "学分",
   "app-menu-about": "关于",
-  "app-menu-random-topic": "随机主题",
-  "app-menu-random-topic-key": "随机主题",
+  "app-menu-random-topic": "随机话题",
+  "app-menu-random-topic-key": "随机话题",
   "app-menu-compare-topics": "比较主题",
   "app-menu-toggle-fullscreen": "切换全屏",
   "app-menu-bookmark-actions": "书签选择操作",
   "app-menu-bookmark-actions-reasoning": "推理",
-  "app-menu-add-bookmark-title": "title",
-  "app-menu-add-bookmark-url": "url",
-  "app-menu-add-bookmark-images": "images",
-  "app-menu-add-bookmark-clear-files": "clear files",
-  "app-menu-add-bookmark-submit": "add bookmark",
+  "app-menu-bookmark-actions-media": "媒体",
+  "app-menu-bookmark-current-view": "为当前视图添加书签",
+  "app-menu-add-bookmark": "添加书签",
+  "app-menu-add-bookmark-title": "标题",
+  "app-menu-add-bookmark-url": "网址",
+  "app-menu-add-bookmark-images": "图片",
+  "app-menu-add-bookmark-clear-files": "清除文件",
+  "app-menu-add-bookmark-submit": "添加书签",
   "app-menu-import-as": "导入书签",
   "app-menu-export-as": "导出书签",
-  "app-menu-bookmark-actions-media": "媒体",
   "app-menu-upload-json": "上传",
-  "app-menu-bookmark-current-view": "为当前视图添加书签",
   "app-menu-visual-search": "视觉搜索",
   "app-menu-reading-assistance": "阅读辅助",
   "app-menu-bread": "词首加粗",
@@ -87,13 +102,11 @@
   "app-menu-pitch": "沥青",
   "app-menu-fullscreen-active-pane": "全屏显示活动窗格",
   "app-menu-toggle-sidebar": "切换侧边栏",
-  "app-menu-add-bookmark": "添加书签",
   "app-menu-note-1": "注意 1：仅当焦点位于侧边栏或维基百科文章窗格时才可用。",
   "app-menu-features": "特征",
   "app-menu-persona": "人格面具",
   "app-menu-country-select": "国家",
   "app-menu-interests": "兴趣",
-  "app-menu-nature-location-quiz": "自然位置测验",
   "app-menu-command-editor": "命令编辑器",
   "app-menu-presentation": "推介会",
   "app-menu-editor": "编辑",
@@ -110,7 +123,7 @@
   "app-menu-goto-previous-pane": "转到上一个窗格",
   "app-menu-new-search": "新搜索",
   "app-menu-structured-search": "结构化搜索",
-  "app-menu-geospatial-search": "地理搜索",
+  "app-menu-geospatial-search": "地理空间搜索",
   "app-section-main": "主要的",
   "app-section-info": "信息",
   "app-section-library": "图书馆",
@@ -149,9 +162,9 @@
   "app-section-science-minerology": "矿物学",
   "app-section-science-archeology": "考古学",
   "app-section-science-mathematics": "数学",
-  "app-section-science-computing": "computing",
-  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "天文学",
+  "app-section-science-physics": "物理",
+  "app-section-science-computing": "计算",
   "app-section-media-datasets": "数据集",
   "app-section-media-datasets-general": "一般的",
   "app-section-media-datasets-topical": "话题性的",
